--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 53f9fbdf06958189a40f78b1b8d68b8fb02b7133
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "58176760"
 documentType: LandingData
 title: Azure Event Grid-dokumentation
 metadata:
-  title: Azure Event Grid-dokumentation – självstudier, API-referens
+  title: 'Azure Event Grid-dokumentation – självstudier, API-referens'
   description: Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid.
   services: event-grid
   author: czeumault
@@ -20,72 +14,72 @@ metadata:
   ms.date: 08/10/2017
   ms.author: carolz
 abstract:
-  description: Azure Event Grid är en fullständigt hanterad smart händelsedirigeringstjänst för enhetlig händelsebearbetning med en offentlig prenumerationsmodell. Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid. Lär dig hur du använder Azure Event Grid med våra snabbstarter, självstudier och exempel.
+  description: 'Azure Event Grid är en fullständigt hanterad smart händelsedirigeringstjänst för enhetlig händelsebearbetning med en offentlig prenumerationsmodell. Använd Azure Event Grid för att agera på relevanta händelser i både Azure- och icke-Azure-tjänster i nära realtid. Lär dig hur du använder Azure Event Grid med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar och prenumererar på anpassade händelser.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/event-grid/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/event-grid/custom-event-quickstart
-    - image:
-        src: /azure/event-grid/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/event-grid/custom-event-quickstart-powershell
-    - image:
-        src: /azure/event-grid/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/event-grid/custom-event-quickstart-portal
-  - type: paragraph
-    text: Lär dig hur du dirigerar Blob Storage-händelser.
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: Lär dig hur du skapar och prenumererar på anpassade händelser.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/event-grid/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/event-grid/custom-event-quickstart
+          - image:
+              src: /azure/event-grid/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/event-grid/custom-event-quickstart-powershell
+          - image:
+              src: /azure/event-grid/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/event-grid/custom-event-quickstart-portal
+      - type: paragraph
+        text: Lär dig hur du dirigerar Blob Storage-händelser.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/event-grid/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/storage/blobs/storage-blob-event-quickstart?toc=%2fazure%2fevent-grid%2ftoc.json
+          - image:
+              src: /azure/event-grid/media/index/logo_powershell.svg
+            text: Azure PowerShell
+            href: /azure/storage/blobs/storage-blob-event-quickstart-powershell?toc=%2fazure%2fevent-grid%2ftoc.json
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: /azure/event-grid/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/storage/blobs/storage-blob-event-quickstart?toc=%2fazure%2fevent-grid%2ftoc.json
-    - image:
-        src: /azure/event-grid/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/storage/blobs/storage-blob-event-quickstart-powershell?toc=%2fazure%2fevent-grid%2ftoc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du utvecklar program som reagerar på händelser.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Lär dig hur du utvecklar program som reagerar på händelser.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Övervaka händelser i virtuella datorer med logiska appar</a>
+          - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Ändra storlek på överförda bilder</a>
+          - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Integrera Azure Automation med Event Grid</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - html: <a href="/azure/event-grid/monitor-virtual-machine-changes-event-grid-logic-app">Övervaka händelser i virtuella datorer med logiska appar</a>
-    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Ändra storlek på överförda bilder</a>
-    - html: <a href="/azure/event-grid/ensure-tags-exists-on-new-virtual-machines">Integrera Azure Automation med Event Grid</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Välj en meddelandemodell i Azure för att koppla dina tjänster löst
+            href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
+            image:
+              src: /learn/achievements/choose-a-messaging-model-in-azure-to-connect-your-services.svg
+              href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-event-grid">Mer interaktiv inlärning...</a>
+  - title: Referens
     items:
-    - title: Välj en meddelandemodell i Azure för att koppla dina tjänster löst
-      href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
-      image:
-        src: /learn/achievements/choose-a-messaging-model-in-azure-to-connect-your-services.svg
-        href: /learn/modules/choose-a-messaging-model-in-azure-to-connect-your-services/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-event-grid">Mer interaktiv inlärning...</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/eventgrid">Azure CLI</a></p><p><a href="/powershell/module/az.eventgrid">PowerShell</a></p>
-    - title: REST API:er
-      html: <p><a href="/rest/api/eventgrid">REST</a></p>
-    - title: Scheman
-      html: <p><a href="/azure/event-grid/subscription-creation-schema ">Prenumerationsschema</a></p><p><a href="/azure/event-grid/event-schema">Händelseschema</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/eventgrid">Azure CLI</a></p><p><a href="/powershell/module/az.eventgrid">PowerShell</a></p>
+          - title: 'REST API:er'
+            html: <p><a href="/rest/api/eventgrid">REST</a></p>
+          - title: Scheman
+            html: <p><a href="/azure/event-grid/subscription-creation-schema ">Prenumerationsschema</a></p><p><a href="/azure/event-grid/event-schema">Händelseschema</a></p>
