--- a/articles/migrate/index.yml
+++ b/articles/migrate/index.yml
@@ -2,7 +2,7 @@
 documentType: LandingData
 title: Azure Migrate-dokumentation
 metadata:
-  title: Dokumentation om Azure Migrate – självstudier, API-referens | Microsoft Docs
+  title: 'Dokumentation om Azure Migrate – självstudier, API-referens | Microsoft Docs'
   description: Lär dig att utvärdera lokala datorer för migrering till Azure
   services: migration-planner
   author: rayne-wiselman
@@ -13,20 +13,14 @@ metadata:
   ms.topic: landing-page
   ms.date: 11/22/2017
   ms.author: raynew
-  ms.openlocfilehash: 64e5293473dd9b5d4b55088e447a5ec3a289372d
-  ms.sourcegitcommit: 5bced5b36f6172a3c20dbfdf311b1ad38de6176a
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 11/27/2017
-  ms.locfileid: "25927126"
 abstract:
   description: Azure Migrate hjälper dig att identifiera och utvärdera hur lämpliga lokala datorer är för migrering till Azure och beräknar storlekar och kostnader för att köra virtuella Azure-datorer.
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att utvärdera virtuella VMware-datorer för migrering till Azure
-  - type: list
-    style: unordered
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="tutorial-assessment-vmware">Utforska och utvärdera lokala virtuella VMware-datorer</a>
+      - type: paragraph
+        text: Lär dig att utvärdera virtuella VMware-datorer för migrering till Azure
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="tutorial-assessment-vmware">Utforska och utvärdera lokala virtuella VMware-datorer</a>
