--- a/articles/app-service/containers/index.yml
+++ b/articles/app-service/containers/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 8b10892a087572f2e66a73539827601410e9aca2
-ms.sourcegitcommit: 33091f0ecf6d79d434fa90e76d11af48fd7ed16d
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/09/2019
-ms.locfileid: "54155056"
 documentType: LandingData
 title: Dokumentation om App Service på Linux
 metadata:
   document_id: 2239df92-8506-4ee4-b5b0-9ab512c487b2
-  title: Dokumentation om Web App for Containers – självstudier, API-referens
+  title: 'Dokumentation om Web App for Containers – självstudier, API-referens'
   meta.description: Learn how to use App Service on Linux to build and host websites and web applications leveraging Docker.
   services: app-service
   author: syntaxc4
@@ -21,106 +15,106 @@ metadata:
   ms.date: 09/05/2017
   ms.author: cfowler
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg
-      text: .NET Core
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-dotnetcore
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg
-      text: Node.js
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-nodejs
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg
-      text: PHP
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-php
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg
-      text: Java
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-java
-    - image:
-        src: https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg
-      text: Python
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-python
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_ruby.svg
-      text: Ruby
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-ruby
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_docker.svg
-      text: Docker
-      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-custom-docker-image
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar kontinuerligt:'
-  - type: list
-    style: icon48
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg'
+            text: .NET Core
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-dotnetcore'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg'
+            text: Node.js
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-nodejs'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg'
+            text: PHP
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-php'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg'
+            text: Java
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-java'
+          - image:
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg'
+            text: Python
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-python'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_ruby.svg'
+            text: Ruby
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-ruby'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
+            text: Docker
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-custom-docker-image'
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar kontinuerligt:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: ../media/index/zip.svg
+            text: ZIP/WAR
+            href: ../deploy-zip.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: ../media/index/ftp.svg
+            text: FTP
+            href: ../deploy-ftp.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: ../media/index/git-icon.svg
+            text: Lokal Git
+            href: ../deploy-local-git.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: 'https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg'
+            text: Azure DevOps
+            href: 'https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
+          - image:
+              src: ../media/index/github-octicons.svg
+            text: GitHub
+            href: ../deploy-continuous-deployment.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: ../media/index/bitbucket.svg
+            text: Bitbucket
+            href: ../deploy-continuous-deployment.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: ../media/index/dropbox.svg
+            text: DropBox-synkronisering
+            href: ../deploy-content-sync.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+          - image:
+              src: ../media/index/onedrive.svg
+            text: OneDrive-synkronisering
+            href: ../deploy-content-sync.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: ../media/index/zip.svg
-      text: ZIP/WAR
-      href: ../deploy-zip.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: ../media/index/ftp.svg
-      text: FTP
-      href: ../deploy-ftp.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: ../media/index/git-icon.svg
-      text: Lokal Git
-      href: ../deploy-local-git.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg
-      text: Azure DevOps
-      href: https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json
-    - image:
-        src: ../media/index/github-octicons.svg
-      text: GitHub
-      href: ../deploy-continuous-deployment.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: ../media/index/bitbucket.svg
-      text: Bitbucket
-      href: ../deploy-continuous-deployment.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: ../media/index/dropbox.svg
-      text: DropBox-synkronisering
-      href: ../deploy-content-sync.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-    - image:
-        src: ../media/index/onedrive.svg
-      text: OneDrive-synkronisering
-      href: ../deploy-content-sync.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera, hantera och övervaka säkra webbappar i App Service på Linux
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och övervaka säkra webbappar i App Service på Linux'
+      - type: list
+        style: ordered
+        items:
+          - html: 'Skapa ett program med <a href="/azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a>, <a href="/azure/app-service/containers/tutorial-java-enterprise-postgresql-app">Java Enterprise med PostgreSQL</a> eller <a href="/azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>'
+          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
+          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
+          - html: <a href="/azure/cdn/cdn-add-to-web-app">Lägga till ett CDN till ditt program</a>
+  - title: Exempel
     items:
-    - html: Skapa ett program med <a href="/azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a>, <a href="/azure/app-service/containers/tutorial-java-enterprise-postgresql-app">Java Enterprise med PostgreSQL</a> eller <a href="/azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
-    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
-    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
-    - html: <a href="/azure/cdn/cdn-add-to-web-app">Lägga till ett CDN till ditt program</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hitta skript för att hantera vanliga uppgifter.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Hitta skript för att hantera vanliga uppgifter.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
+          - html: <a href="/cli/azure/appservice">Azure CLI</a>
+  - title: Referens
     items:
-    - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
-    - html: <a href="/cli/azure/appservice">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api">NET</a></p><p><a href="/java/api/">Java</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/appservice">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api">NET</a></p><p><a href="/java/api/">Java</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/appservice">REST API-referens</a></p>
