--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9b3a65446a6f55101e93fdee4c437cde7408b7ca
-ms.sourcegitcommit: 803e66de6de4a094c6ae9cde7b76f5f4b622a7bb
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/02/2019
-ms.locfileid: "53973085"
 documentType: LandingData
 title: Dokumentation om Application Gateway
 metadata:
-  title: Dokumentation om Azure Application Gateway – Självstudier, API-referens
-  meta.description: Learn how to create application gateways. Documentation helps you plan, deploy, and manage web traffic to your Azure resources.
+  title: 'Dokumentation om Azure Application Gateway – Självstudier, API-referens'
+  meta.description: 'Learn how to create application gateways. Documentation helps you plan, deploy, and manage web traffic to your Azure resources.'
   services: application-gateway
   author: davidmu1
   manager: jeconnocfte
@@ -18,59 +12,59 @@ metadata:
   ms.date: 02/01/2018
   ms.author: davidmu
 abstract:
-  description: Lär dig hur du distribuerar Application Gateway, en Application Deliver Controller (ADC) som en tjänst. Självstudier, API-referenser och annan dokumentation som visar hur du konfigurerar routning på appnivå och belastningsutjämningstjänster som hjälper dig att bygga en skalbar och högtillgänglig frontwebb.
+  description: 'Lär dig hur du distribuerar Application Gateway, en Application Deliver Controller (ADC) som en tjänst. Självstudier, API-referenser och annan dokumentation som visar hur du konfigurerar routning på appnivå och belastningsutjämningstjänster som hjälper dig att bygga en skalbar och högtillgänglig frontwebb.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du hanterar webbtrafik till dina resurser med Application Gateway:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-powershell
-    - image:
-        src: https://docs.microsoft.com/azure/application-gateway/media/index/cli.svg
-      text: Azure CLI
-      href: https://docs.microsoft.com/azure/application-gateway/quick-create-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera, hantera och övervaka Application Gateway på Azure
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du hanterar webbtrafik till dina resurser med Application Gateway:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-portal'
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-powershell'
+          - image:
+              src: 'https://docs.microsoft.com/azure/application-gateway/media/index/cli.svg'
+            text: Azure CLI
+            href: 'https://docs.microsoft.com/azure/application-gateway/quick-create-cli'
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/application-gateway/tutorial-manage-web-traffic-cli">Hantera webbtrafik med Application Gateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-restrict-web-traffic-cli">Begränsa webbtrafik med en brandvägg för webbaserade program på Application Gateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-ssl-cli">Aktivera SSL-avslutning på Application Gateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-multiple-sites-cli">Tillhandahåll en värdtjänst för flera webbplatser med Application Gateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-url-route-cli">Dirigera trafik utifrån URL:en i Application Gateway.</a>
-    - html: <a href="/azure/application-gateway/tutorial-url-redirect-cli">Dirigera trafik till specifika servrar i en Application Gateway-pool.</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hantera webbtrafik med Application Gateway.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig att distribuera, hantera och övervaka Application Gateway på Azure'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/application-gateway/tutorial-manage-web-traffic-cli">Hantera webbtrafik med Application Gateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-restrict-web-traffic-cli">Begränsa webbtrafik med en brandvägg för webbaserade program på Application Gateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-ssl-cli">Aktivera SSL-avslutning på Application Gateway.</a>
+          - html: <a href="/azure/application-gateway/tutorial-multiple-sites-cli">Tillhandahåll en värdtjänst för flera webbplatser med Application Gateway.</a>
+          - html: '<a href="/azure/application-gateway/tutorial-url-route-cli">Dirigera trafik utifrån URL:en i Application Gateway.</a>'
+          - html: <a href="/azure/application-gateway/tutorial-url-redirect-cli">Dirigera trafik till specifika servrar i en Application Gateway-pool.</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/application-gateway/cli-samples">Azure CLI</a>
-    - html: <a href="/azure/application-gateway/powershell-samples">Azure PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Hantera webbtrafik med Application Gateway.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/application-gateway/cli-samples">Azure CLI</a>
+          - html: <a href="/azure/application-gateway/powershell-samples">Azure PowerShell</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/resourcemanager">Azure PowerShell</a></p><p><a href="/cli/azure/network/application-gateway">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="/javascript/api/azure-arm-network/ApplicationGateways">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure-mgmt-network/azure.mgmt.network.v2018_08_01.operations.application_gateways_operations.applicationgatewaysoperations?view=azure-python">Python</a></p>
-    - title: REST
-      html: <p><a href="https://msdn.microsoft.com/library/mt684941">Fullständig REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/resourcemanager">Azure PowerShell</a></p><p><a href="/cli/azure/network/application-gateway">Azure CLI</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api">NET</a></p><p><a href="/java/api/com.microsoft.azure.management.network">Java</a></p><p><a href="/javascript/api/azure-arm-network/ApplicationGateways">Node.js</a></p><p><a href="https://docs.microsoft.com/python/api/azure-mgmt-network/azure.mgmt.network.v2018_08_01.operations.application_gateways_operations.applicationgatewaysoperations?view=azure-python">Python</a></p>'
+          - title: REST
+            html: '<p><a href="https://msdn.microsoft.com/library/mt684941">Fullständig REST API-referens</a></p>'
