--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0a1c495362ef38723c61eace25ebb13ec9ed3a6a
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57883652"
 documentType: LandingData
 title: Dokumentation om Azure Databricks
 metadata:
@@ -17,48 +11,48 @@ metadata:
   ms.date: 03/19/2018
   ms.author: mamccrea
 abstract:
-  description: Lär dig använda den Apache Spark-baserade analysplattformen Azure Databricks med enkel konfiguration, smidiga arbetsflöden och en interaktiv arbetsyta där datatekniker, dataingenjörer och affärsanalytiker kan samarbeta. Snabbstarter och självstudier visar hur du kommer igång med Azure Databricks och integrerar andra Azure-tjänster.
+  description: 'Lär dig använda den Apache Spark-baserade analysplattformen Azure Databricks med enkel konfiguration, smidiga arbetsflöden och en interaktiv arbetsyta där datatekniker, dataingenjörer och affärsanalytiker kan samarbeta. Snabbstarter och självstudier visar hur du kommer igång med Azure Databricks och integrerar andra Azure-tjänster.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video.png
       width: 250
-    title: Introduktion till Azure Databricks (3:38)
-    href: https://azure.microsoft.com/resources/videos/connect-2017-introduction-to-azure-databricks/
+    title: 'Introduktion till Azure Databricks (3:38)'
+    href: 'https://azure.microsoft.com/resources/videos/connect-2017-introduction-to-azure-databricks/'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig att skapa en arbetsyta för Azure Databricks, ett Spark-kluster och sedan hur du kör jobb med:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/azure-databricks/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/azure-databricks/quickstart-create-databricks-workspace-portal
-    - image:
-        src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
-      text: Resource Manager-mall
-      href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig arbeta med Azure Databricks:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig att skapa en arbetsyta för Azure Databricks, ett Spark-kluster och sedan hur du kör jobb med:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/azure-databricks/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/azure-databricks/quickstart-create-databricks-workspace-portal
+          - image:
+              src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
+            text: Resource Manager-mall
+            href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Extrahera, transformera och läsa in data</a>
-    - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Strömma data med Event Hubs</a>
-    - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Attitydanalys med Cognitive Services</a>
-    - html: <a href="https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html" target="_blank">Strömma data från HDInsight Kafka</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Lär dig arbeta med Azure Databricks:'
+      - type: list
+        style: ordered
+        items:
+          - html: '<a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Extrahera, transformera och läsa in data</a>'
+          - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Strömma data med Event Hubs</a>
+          - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Attitydanalys med Cognitive Services</a>
+          - html: '<a href="https://docs.azuredatabricks.net/spark/latest/structured-streaming/kafka.html" target="_blank">Strömma data från HDInsight Kafka</a>'
+  - title: Referens
     items:
-    - title: REST
-      html: <p><a href="/rest/api/databricks">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST
+            html: <p><a href="/rest/api/databricks">REST-API</a></p>
