--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -1,51 +1,44 @@
-items:
 - name: Dokumentation om avvikelseidentifiering
   href: index.yml
 - name: Översikt
-  items:
-  - name: Vad är API:et för avvikelseidentifiering?
-    href: overview.md
   expanded: true
+  items:
+    - name: 'Vad är API:et för avvikelseidentifiering?'
+      href: overview.md
 - name: Snabbstarter
-  items:
-  - name: Identifiera avvikelser i dina data
-    items:
-    - name: Använd C#
-      href: quickstarts/detect-data-anomalies-csharp.md
-    - name: Använda Java
-      href: quickstarts/detect-data-anomalies-java.md
-    - name: Använda Python
-      href: quickstarts/detect-data-anomalies-python.md
   expanded: true
+  items:
+    - name: Identifiera avvikelser i dina data
+      items:
+        - name: 'Använd C#'
+          href: quickstarts/detect-data-anomalies-csharp.md
+        - name: Använda Java
+          href: quickstarts/detect-data-anomalies-java.md
+        - name: Använda Python
+          href: quickstarts/detect-data-anomalies-python.md
 - name: Instruktionsguider
   items:
-  - name: Identifiera avvikelser i dina data
-    href: how-to/identify-anomalies.md
+    - name: Identifiera avvikelser i dina data
+      href: how-to/identify-anomalies.md
 - name: Begrepp
   items:
-  - name: Regelverk för API:et för avvikelseidentifiering
-    href: concepts/anomaly-detection-best-practices.md
+    - name: 'Regelverk för API:et för avvikelseidentifiering'
+      href: concepts/anomaly-detection-best-practices.md
 - name: Referens
   items:
-  - name: Referens för REST API
-    href: https://aka.ms/anomaly-detector-rest-api-ref
-  - name: SDK:er
-    items:
-    - name: .NET
-      href: https://aka.ms/anomaly-detector-dotnet-ref
+    - name: Referens för REST API
+      href: 'https://aka.ms/anomaly-detector-rest-api-ref'
+    - name: 'SDK:er'
+      items:
+        - name: .NET
+          href: 'https://aka.ms/anomaly-detector-dotnet-ref'
 - name: Resurser
   items:
-  - name: Prissättning
-    href: https://aka.ms/anomaly-detector-pricing
-  - name: Regional tillgänglighet
-    href: https://aka.ms/anomaly-detector-region
-  - name: Referenslösningsarkitektur
-    href: https://azure.microsoft.com/solutions/architecture/anomaly-detector-process/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-anomaly-detection
-ms.openlocfilehash: 84e9317e3eb20181dcf1003718eb33acddbd84fa
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59786989"
+    - name: Prissättning
+      href: 'https://aka.ms/anomaly-detector-pricing'
+    - name: Regional tillgänglighet
+      href: 'https://aka.ms/anomaly-detector-region'
+    - name: Referenslösningsarkitektur
+      href: 'https://azure.microsoft.com/solutions/architecture/anomaly-detector-process/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-anomaly-detection'
