--- a/articles/cognitive-services/Labs/URL-Preview/index.yml
+++ b/articles/cognitive-services/Labs/URL-Preview/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ceffd2a6e4bfcfac167ab26de757286c6905e9b3
-ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47096481"
 documentType: LandingData
 title: Dokumentation om förhandsversion av projekt-URL
 metadata:
@@ -18,6 +12,6 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/19/2018
-  ms.author: rosh, v-gedod
+  ms.author: 'rosh, v-gedod'
 abstract:
   description: 'API för förhandsversion av Bing-URL: hämtar kortfattad information om en mål-URL, inklusive beskrivning, flaggan isFamilyFriendly, representativ bild samt länk till sidan.'
