--- a/articles/container-service/TOC.yml
+++ b/articles/container-service/TOC.yml
@@ -1,19 +1,12 @@
-items:
 - name: Kubernetes
   href: kubernetes/container-service-kubernetes-walkthrough.md
 - name: DC/OS och Docker Swarm
   href: dcos-swarm/container-service-dcos-quickstart.md
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-container-instances&azure-container-registry
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=containers
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-ms.openlocfilehash: 44264a8288d1cd0b4bdc6d331e84e78ceff066a0
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46995779"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-container-instances&azure-container-registry
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=containers'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
