--- a/articles/container-service/kubernetes/index.yml
+++ b/articles/container-service/kubernetes/index.yml
@@ -2,9 +2,9 @@
 documentType: LandingData
 title: Dokumentation om Azure Container Service med Kubernetes
 metadata:
-  document_id: 
-  title: Dokumentation om Azure Container Service med Kubernetes – självstudier, API-referens | Microsoft Docs
-  meta.description: Azure Container Service allows you to quickly deploy a production ready Kubernetes cluster. Learn how to use Azure Container Service in concert with Kubernetes with these quickstarts, tutorials, and samples.
+  document_id: null
+  title: 'Dokumentation om Azure Container Service med Kubernetes – självstudier, API-referens | Microsoft Docs'
+  meta.description: 'Azure Container Service allows you to quickly deploy a production ready Kubernetes cluster. Learn how to use Azure Container Service in concert with Kubernetes with these quickstarts, tutorials, and samples.'
   services: container-service
   author: carolz
   manager: carolz
@@ -14,54 +14,48 @@ metadata:
   ms.topic: landing-page
   ms.date: 07-21-2017
   ms.author: carolz
-  ms.openlocfilehash: 93abd74e649577abff9ce27f68c6b8456258d9b9
-  ms.sourcegitcommit: 9cdd83256b82e664bd36991d78f87ea1e56827cd
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/16/2018
-  ms.locfileid: "31394585"
 abstract:
-  description: Med Azure Container Service kan du snabbt distribuera ett produktionsklart Kubernetes-kluster. Lär dig hur du använder Azure Container Service med Kubernetes med de här snabbstarterna, självstudierna och exemplen.
+  description: 'Med Azure Container Service kan du snabbt distribuera ett produktionsklart Kubernetes-kluster. Lär dig hur du använder Azure Container Service med Kubernetes med de här snabbstarterna, självstudierna och exemplen.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar Kubernetes-kluster med Azure Container Service:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
-      text: Skapa ett Kubernetes-kluster
-      href: /azure/container-service/kubernetes/container-service-kubernetes-walkthrough
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du distribuerar, hanterar och uppdaterar program i ett Azure Container Service Kubernetes-kluster.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar Kubernetes-kluster med Azure Container Service:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+            text: Skapa ett Kubernetes-kluster
+            href: /azure/container-service/kubernetes/container-service-kubernetes-walkthrough
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-deploy-cluster">Distribuera ett Kubernetes-kluster i Azure Container Service (Deploy a Kubernetes cluster in Azure Container Service)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
-    - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-monitor">Övervaka Kubernetes med Log Analytics</a>
-- title: Exempel
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar, hanterar och uppdaterar program i ett Azure Container Service Kubernetes-kluster.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-app">Skapa behållaravbildningar från ett program (Create container images from an application)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-acr">Ladda upp behållaravbildningar till Azure Container Registry (Upload container images to the Azure Container Registry)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-deploy-cluster">Distribuera ett Kubernetes-kluster i Azure Container Service (Deploy a Kubernetes cluster in Azure Container Service)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-deploy-application">Kör dina behållaravbildningar i Kubernetes (Run your container images in Kubernetes)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-scale">Skala ett program och Kubernetes-infrastruktur (Scale an application and Kubernetes infrastructure)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-app-update">Uppdatera ett program som körs i Kubernetes (Update an application running in Kubernetes)</a>
+          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-monitor">Övervaka Kubernetes med Log Analytics</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/container-service/cli-samples">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/container-service/cli-samples">Azure CLI</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/acs">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/container-service">REST API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/acs">Azure CLI</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/container-service">REST-API</a></p>
