--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -1,17 +1,11 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 89376bf654a23b37e004a1b9b00e32a0c2ac3e2a
-ms.sourcegitcommit: 5978d82c619762ac05b19668379a37a40ba5755b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55495080"
 documentType: LandingData
 title: Azure for Containers
 metadata:
-  document_id: 
-  title: Azure for Containers – snabbstarter, självstudier, API-referens
-  description: Kom igång med att hantera och distribuera containerappar med Azure med hjälp av snabbstarter, självstudier och verktyg för containrar.
-  keywords: Azure, Containers, Docker, API, Kubernetes
+  document_id: null
+  title: 'Azure for Containers – snabbstarter, självstudier, API-referens'
+  description: 'Kom igång med att hantera och distribuera containerappar med Azure med hjälp av snabbstarter, självstudier och verktyg för containrar.'
+  keywords: 'Azure, Containers, Docker, API, Kubernetes'
   author: dlepow
   ms.author: danlep
   manager: jeconnoc
@@ -19,68 +13,69 @@ metadata:
   ms.topic: article
   ms.prod: azure
   featureFlags:
-  - clicktale
+    - clicktale
   ms.technology: azure
   ms.devlang: multiple
   ms.service: multiple
 sections:
-- items:
-  - type: markdown
-    text: "Kom igång med att distribuera och hantera continerappar med Azure-verktyg och -tjänster för containar. \n"
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du använder containrar med Azure-tjänster.
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 2
+  - items:
+      - type: markdown
+        text: |
+          Kom igång med att distribuera och hantera continerappar med Azure-verktyg och -tjänster för containar. 
+  - title: Snabbstarter på 5 minuter
     items:
-    - href: ../aks/kubernetes-walkthrough.md
-      title: Skapa ett Kubernetes-kluster med Azure Kubernetes Service (AKS)
-      image:
-        src: /azure/media/index/ContainerService.svg
-    - href: https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers
-      title: Distribuera ett Windows-containerprogram med Service Fabric
-      image:
-        src: /azure/media/index/Fabric.svg
-    - href: https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go
-      title: Skapa en behållarbaserad app med Azure Web Apps for Containers
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_linux.svg
-    - href: https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli
-      title: Skapa ett privat Docker-register i Azure Container Registry
-      image:
-        src: /azure/media/index/container-registry.svg
-    - href: https://docs.microsoft.com/azure/container-instances/container-instances-quickstart
-      title: Köra en containerapp på begäran i Azure Container Instances
-      image:
-        src: /azure/media/index/containerinstances.svg
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du distribuerar, hanterar och uppdaterar containerappar med hjälp av Azure-tjänster
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig hur du använder containrar med Azure-tjänster.
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 2
+        items:
+          - href: ../aks/kubernetes-walkthrough.md
+            title: Skapa ett Kubernetes-kluster med Azure Kubernetes Service (AKS)
+            image:
+              src: /azure/media/index/ContainerService.svg
+          - href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-quickstart-containers'
+            title: Distribuera ett Windows-containerprogram med Service Fabric
+            image:
+              src: /azure/media/index/Fabric.svg
+          - href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go'
+            title: Skapa en behållarbaserad app med Azure Web Apps for Containers
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+          - href: 'https://docs.microsoft.com/azure/container-registry/container-registry-get-started-azure-cli'
+            title: Skapa ett privat Docker-register i Azure Container Registry
+            image:
+              src: /azure/media/index/container-registry.svg
+          - href: 'https://docs.microsoft.com/azure/container-instances/container-instances-quickstart'
+            title: Köra en containerapp på begäran i Azure Container Instances
+            image:
+              src: /azure/media/index/containerinstances.svg
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa och distribuera en container till Azure Kubernetes Service</a>
-    - html: <a href="/azure/service-fabric/service-fabric-host-app-in-a-container">Skapa och distribuera en .NET-containerapp till Azure Service Fabric</a>
-    - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Skapa en app med flera behållare i Web App for Containers</a>
-    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Skapa och distribuera containeravbildningar med Azure Container Registry-uppgifter</a>
-    - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Skapa och distribuera en container till Azure Container Instances</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar, hanterar och uppdaterar containerappar med hjälp av Azure-tjänster'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Skapa och distribuera en container till Azure Kubernetes Service</a>
+          - html: <a href="/azure/service-fabric/service-fabric-host-app-in-a-container">Skapa och distribuera en .NET-containerapp till Azure Service Fabric</a>
+          - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Skapa en app med flera behållare i Web App for Containers</a>
+          - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Skapa och distribuera containeravbildningar med Azure Container Registry-uppgifter</a>
+          - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Skapa och distribuera en container till Azure Container Instances</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Kör Docker-behållare i Azure Container Instances
-      href: /learn/modules/run-docker-with-azure-container-instances/
-      image:
-        src: /learn/achievements/run-docker-with-azure-container-instances.svg
-        href: /learn/modules/run-docker-with-azure-container-instances/
-    - title: Skapa och lagra containeravbildningar med Azure Container Registry
-      href: /learn/modules/build-and-store-container-images/
-      image:
-        src: /learn/achievements/build-and-store-container-images.svg
-        href: /learn/modules/build-and-store-container-images/
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Kör Docker-behållare i Azure Container Instances
+            href: /learn/modules/run-docker-with-azure-container-instances/
+            image:
+              src: /learn/achievements/run-docker-with-azure-container-instances.svg
+              href: /learn/modules/run-docker-with-azure-container-instances/
+          - title: Skapa och lagra containeravbildningar med Azure Container Registry
+            href: /learn/modules/build-and-store-container-images/
+            image:
+              src: /learn/achievements/build-and-store-container-images.svg
+              href: /learn/modules/build-and-store-container-images/
