--- a/articles/cost-management/index.yml
+++ b/articles/cost-management/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f14bcd11a5769e5057fadca198ac57110edf8ef5
-ms.sourcegitcommit: 9fb6f44dbdaf9002ac4f411781bf1bd25c191e26
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 12/08/2018
-ms.locfileid: "53099281"
 documentType: LandingData
 title: Azure Cost Management-dokumentation
 metadata:
-  title: Dokumentation om Cost Management – Självstudier, API-referens | Microsoft Docs
-  description: Azure Cost Management är en kostnadshanteringslösning som hjälper dig att övervaka och kontrollera Azure-utgifter och optimera resursanvändning. Lär dig hur du analyserar kostnader, skapar och hanterar budgetar, exporterar data, och granskar och arbetar med rekommendationer med våra snabbstarter och självstudier.
+  title: 'Dokumentation om Cost Management – Självstudier, API-referens | Microsoft Docs'
+  description: 'Azure Cost Management är en kostnadshanteringslösning som hjälper dig att övervaka och kontrollera Azure-utgifter och optimera resursanvändning. Lär dig hur du analyserar kostnader, skapar och hanterar budgetar, exporterar data, och granskar och arbetar med rekommendationer med våra snabbstarter och självstudier.'
   services: cost-management
   author: bandersmsft
   manager: dougeby
@@ -20,38 +14,38 @@ metadata:
   ms.date: 12/05/2018
   ms.author: banders
 abstract:
-  description: Azure Cost Management är en kostnadshanteringslösning som hjälper dig att övervaka och kontrollera Azure-utgifter och optimera resursanvändning. Lär dig hur du analyserar kostnader, skapar och hanterar budgetar, exporterar data, och granskar och arbetar med rekommendationer med våra snabbstarter och självstudier.
+  description: 'Azure Cost Management är en kostnadshanteringslösning som hjälper dig att övervaka och kontrollera Azure-utgifter och optimera resursanvändning. Lär dig hur du analyserar kostnader, skapar och hanterar budgetar, exporterar data, och granskar och arbetar med rekommendationer med våra snabbstarter och självstudier.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du kommer igång med Azure Cost Management för att analysera kostnader i din organisation.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Analysera kostnader i Cost Management
-      href: quick-acm-cost-analysis
-- title: Stegvisa självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar budgetar, exporterar data, och granskar och arbetar med rekommendationer med Cost Management.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Lär dig hur du kommer igång med Azure Cost Management för att analysera kostnader i din organisation.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Analysera kostnader i Cost Management
+            href: quick-acm-cost-analysis
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="tutorial-acm-create-budgets">Skapa och hantera budgetar</a>
-    - html: <a href="tutorial-export-acm-data">Exportera data</a>
-    - html: <a href="tutorial-acm-opt-recommendations">Granska och arbeta med optimeringsrekommendationer</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: 'Lär dig hur du skapar budgetar, exporterar data, och granskar och arbetar med rekommendationer med Cost Management.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="tutorial-acm-create-budgets">Skapa och hantera budgetar</a>
+          - html: <a href="tutorial-export-acm-data">Exportera data</a>
+          - html: <a href="tutorial-acm-opt-recommendations">Granska och arbeta med optimeringsrekommendationer</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Förutse kostnader och optimera utgifter för Azure
-      href: /learn/modules/predict-costs-and-optimize-spending/
-      image:
-        src: /learn/achievements/predict-costs-and-optimize-spending.svg
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-cost-management">Mer interaktiv inlärning...</a>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Förutse kostnader och optimera utgifter för Azure
+            href: /learn/modules/predict-costs-and-optimize-spending/
+            image:
+              src: /learn/achievements/predict-costs-and-optimize-spending.svg
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-cost-management">Mer interaktiv inlärning...</a>
