--- a/articles/databox-online/index.yml
+++ b/articles/databox-online/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 376f2bd792cb1b3190507f5571a8b7a33daf2542
-ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58439132"
 documentType: LandingData
 title: Azure Data Box-dokumentation – överföring online
 metadata:
   title: Azure Data Box-dokumentation – överföring online
-  description: Använd Data Box-enheter för dataöverföringar med hög prestanda över nätverket till Azure på ett snabbt, prisvärt och tillförlitligt sätt.
+  description: 'Använd Data Box-enheter för dataöverföringar med hög prestanda över nätverket till Azure på ett snabbt, prisvärt och tillförlitligt sätt.'
   services: databox
   author: alkohli
   manager: twooley
@@ -19,27 +13,27 @@ metadata:
   ms.date: 03/25/2019
   ms.author: alkohli
 abstract:
-  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för dataöverföringar över nätverket med höga prestanda.<p>Välj Data Box Gateway för att skicka data för molnarkivering eller haveriberedskap, eller för att bearbeta data i molnskala.  Använd Data Box Edge för att filtrera, analysera och transformera data när de flyttas till Azure.</p><p>Lär dig hur du kan använda Data Box Gateway och Data Box Edge för nätverksbaserad överföring med våra självstudier.</p>
+  description: 'Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för dataöverföringar över nätverket med höga prestanda.<p>Välj Data Box Gateway för att skicka data för molnarkivering eller haveriberedskap, eller för att bearbeta data i molnskala.  Använd Data Box Edge för att filtrera, analysera och transformera data när de flyttas till Azure.</p><p>Lär dig hur du kan använda Data Box Gateway och Data Box Edge för nätverksbaserad överföring med våra självstudier.</p>'
 sections:
-- title: Självstudier
-  items:
-  - type: paragraph
-    text: <b>För Data Box Gateway</b>
-  - type: list
-    style: ordered
+  - title: Självstudier
     items:
-    - html: <a href="data-box-gateway-deploy-prep">Förbereda distributionen av Azure Data Box Gateway</a>
-    - html: <a href="data-box-gateway-deploy-provision-hyperv">Etablera Azure Data Box Gateway i Hyper-V</a>
-    - html: <a href="data-box-gateway-deploy-provision-vmware">Etablera Azure Data Box Gateway i VMware</a>
-    - html: <a href="data-box-gateway-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Gateway</a>
-    - html: <a href="data-box-gateway-deploy-add-shares">Överföra data med Azure Data Box Gateway</a>
-  - type: paragraph
-    text: <b>För Data Box Edge</b>
-  - type: list
-    style: ordered
-    items:
-    - html: <a href="data-box-edge-deploy-prep">Förbereda distributionen av Azure Data Box Edge</a>
-    - html: <a href="data-box-edge-deploy-install">Installera Azure Data Box Edge</a>
-    - html: <a href="data-box-edge-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Edge</a>
-    - html: <a href="data-box-edge-deploy-add-shares">Överföra data med Azure Data Box Edge</a>
-    - html: <a href="data-box-edge-deploy-configure-compute">Transformera data med Azure Data Box Edge</a>
+      - type: paragraph
+        text: <b>För Data Box Gateway</b>
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="data-box-gateway-deploy-prep">Förbereda distributionen av Azure Data Box Gateway</a>
+          - html: <a href="data-box-gateway-deploy-provision-hyperv">Etablera Azure Data Box Gateway i Hyper-V</a>
+          - html: <a href="data-box-gateway-deploy-provision-vmware">Etablera Azure Data Box Gateway i VMware</a>
+          - html: '<a href="data-box-gateway-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Gateway</a>'
+          - html: <a href="data-box-gateway-deploy-add-shares">Överföra data med Azure Data Box Gateway</a>
+      - type: paragraph
+        text: <b>För Data Box Edge</b>
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="data-box-edge-deploy-prep">Förbereda distributionen av Azure Data Box Edge</a>
+          - html: <a href="data-box-edge-deploy-install">Installera Azure Data Box Edge</a>
+          - html: '<a href="data-box-edge-deploy-connect-setup-activate">Ansluta, konfigurera och aktivera Azure Data Box Edge</a>'
+          - html: <a href="data-box-edge-deploy-add-shares">Överföra data med Azure Data Box Edge</a>
+          - html: <a href="data-box-edge-deploy-configure-compute">Transformera data med Azure Data Box Edge</a>
