--- a/articles/dev-spaces/index.yml
+++ b/articles/dev-spaces/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5fc027e52d838a85e7b880e3dd0daf4438e850dc
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57852006"
 documentType: LandingData
 title: Azure Dev Spaces
 metadata:
@@ -17,48 +11,47 @@ metadata:
   ms.date: 08/23/2018
   ms.author: zarhoads
 sections:
-- title: En snabb, iterativ Kubernetes-utvecklingsupplevelse för team
-  items:
-  - type: paragraph
-    text: Med minimal konfiguration av utvecklingsdatorer kan du iterativt köra och felsöka containrar direkt i Azure Kubernetes Service (AKS).  Du kan också samarbeta med ditt team i ett delat Kubernetes-kluster och utföra slutpunkt-till-slutpunkt-testning med andra komponenter utan att replikera eller simulera beroenden. Med Azure Dev Spaces kan du utveckla på Windows, Mac eller Linux med välbekanta verktyg som Visual Studio, Visual Studio Code eller kommandoraden.
-  - type: markdown
-    text: >-
-      > [!IMPORTANT]
-
-      > Azure Dev Spaces finns för närvarande i en förhandsversion och stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, norra**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner [kompletterande användningsvillkor](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).
-- title: Komma igång med Azure Dev Spaces
-  items:
-  - type: paragraph
-    text: 'Välj en språkspecifik guide för att komma igång:'
-  - type: list
-    style: icon48
+  - title: 'En snabb, iterativ Kubernetes-utvecklingsupplevelse för team'
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_java.svg
-      text: Java
-      href: quickstart-java.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_vs-code.svg
-      text: .NET och VS Code
-      href: quickstart-netcore.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: .NET och Visual Studio
-      href: quickstart-netcore-visualstudio.md
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
-      text: Node.js
-      href: quickstart-nodejs.md
-- title: Så förenklas Kubernetes-utveckling av Azure Dev Spaces
-  items:
-  - type: paragraph
-    text: Med Azure Dev Spaces kan utvecklingsteam bli mer produktiva på Kubernetes på följande sätt
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Med minimal konfiguration av utvecklingsdatorer kan du iterativt köra och felsöka containrar direkt i Azure Kubernetes Service (AKS).  Du kan också samarbeta med ditt team i ett delat Kubernetes-kluster och utföra slutpunkt-till-slutpunkt-testning med andra komponenter utan att replikera eller simulera beroenden. Med Azure Dev Spaces kan du utveckla på Windows, Mac eller Linux med välbekanta verktyg som Visual Studio, Visual Studio Code eller kommandoraden.'
+      - type: markdown
+        text: |-
+          > [!IMPORTANT]
+          > Azure Dev Spaces finns för närvarande i en förhandsversion och stöds endast av AKS-kluster i regionerna **USA, östra**, **USA, östra 2**, **USA, centrala**, **USA, västra 2**, **Europa, norra**, **Europa, västra**, **Asien, sydöstra**, **Kanada, centrala** och **Kanada, östra**. Förhandsversioner görs tillgängliga för dig under förutsättning att du godkänner [kompletterande användningsvillkor](https://azure.microsoft.com/support/legal/preview-supplemental-terms/). Vissa aspekter av funktionen kan ändras innan den är allmänt tillgänglig (GA).
+  - title: Komma igång med Azure Dev Spaces
     items:
-    - text: Minimera konfiguration av lokala utvecklingsdatorer för varje teammedlem och arbeta direkt i AKS, ett hanterat Kubernetes-kluster i Azure.
-    - text: Iterera och felsök snabbt koden direkt i Kubernetes med hjälp av Visual Studio 2017 eller Visual Studio Code.
-    - text: Generera ”konfiguration som kod-tillgångar” för Docker och Kubernetes som du kan använda hela vägen från utveckling till produktion.
-    - text: Dela ett hanterat Kubernetes-kluster med ditt team och samarbeta. Utveckla koden isolerat och utför testning från slutpunkt till slutpunkt med andra komponenter utan replikerings- eller simuleringsberoenden.
-  - type: markdown
-    text: '![](media/azure-dev-spaces/collaborate-graphic.gif)'
+      - type: paragraph
+        text: 'Välj en språkspecifik guide för att komma igång:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_java.svg'
+            text: Java
+            href: quickstart-java.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: .NET och VS Code
+            href: quickstart-netcore.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: .NET och Visual Studio
+            href: quickstart-netcore-visualstudio.md
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_nodejs.svg'
+            text: Node.js
+            href: quickstart-nodejs.md
+  - title: Så förenklas Kubernetes-utveckling av Azure Dev Spaces
+    items:
+      - type: paragraph
+        text: Med Azure Dev Spaces kan utvecklingsteam bli mer produktiva på Kubernetes på följande sätt
+      - type: list
+        style: unordered
+        items:
+          - text: 'Minimera konfiguration av lokala utvecklingsdatorer för varje teammedlem och arbeta direkt i AKS, ett hanterat Kubernetes-kluster i Azure.'
+          - text: Iterera och felsök snabbt koden direkt i Kubernetes med hjälp av Visual Studio 2017 eller Visual Studio Code.
+          - text: Generera ”konfiguration som kod-tillgångar” för Docker och Kubernetes som du kan använda hela vägen från utveckling till produktion.
+          - text: Dela ett hanterat Kubernetes-kluster med ditt team och samarbeta. Utveckla koden isolerat och utför testning från slutpunkt till slutpunkt med andra komponenter utan replikerings- eller simuleringsberoenden.
+      - type: markdown
+        text: '![](media/azure-dev-spaces/collaborate-graphic.gif)'
