--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -1,193 +1,186 @@
-items:
 - name: Dokumentation om Azure Event Grid
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Event Grid?
-    href: overview.md
-  - name: Jämföra meddelandetjänster
-    href: compare-messaging-services.md
+    - name: Vad är Event Grid?
+      href: overview.md
+    - name: Jämföra meddelandetjänster
+      href: compare-messaging-services.md
 - name: Snabbstarter
-  items:
-  - name: Storage-händelser
-    items:
-    - name: Azure CLI
-      href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
-    - name: PowerShell
-      href: ../storage/blobs/storage-blob-event-quickstart-powershell.md?toc=%2fazure%2fevent-grid%2ftoc.json
-    - name: Portalen
-      href: blob-event-quickstart-portal.md
-  - name: Anpassade händelser
-    items:
-    - name: Azure CLI
-      href: custom-event-quickstart.md
-    - name: PowerShell
-      href: custom-event-quickstart-powershell.md
-    - name: Portalen
-      href: custom-event-quickstart-portal.md
-  - name: Kölagring som händelsehanterare
-    href: custom-event-to-queue-storage.md
-  - name: Event Hubs som händelsehanterare
-    href: custom-event-to-eventhub.md
-  - name: Container Registry-händelser
-    href: ../container-registry/container-registry-event-grid-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
   expanded: true
+  items:
+    - name: Storage-händelser
+      items:
+        - name: Azure CLI
+          href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
+        - name: PowerShell
+          href: ../storage/blobs/storage-blob-event-quickstart-powershell.md?toc=%2fazure%2fevent-grid%2ftoc.json
+        - name: Portalen
+          href: blob-event-quickstart-portal.md
+    - name: Anpassade händelser
+      items:
+        - name: Azure CLI
+          href: custom-event-quickstart.md
+        - name: PowerShell
+          href: custom-event-quickstart-powershell.md
+        - name: Portalen
+          href: custom-event-quickstart-portal.md
+    - name: Kölagring som händelsehanterare
+      href: custom-event-to-queue-storage.md
+    - name: Event Hubs som händelsehanterare
+      href: custom-event-to-eventhub.md
+    - name: Container Registry-händelser
+      href: ../container-registry/container-registry-event-grid-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
 - name: Självstudier
   items:
-  - name: E-postmeddelande när en virtuell dator ändras
-    href: monitor-virtual-machine-changes-event-grid-logic-app.md
-  - name: Ändra storlek på överförda bilder
-    href: resize-images-on-storage-blob-upload-event.md
-  - name: Utlösa Automation-runbook
-    href: ensure-tags-exists-on-new-virtual-machines.md
-  - name: E-postmeddelande när IoT Hub-enheter läggs till
-    href: publish-iot-hub-events-to-logic-apps.md
-  - name: Svara på Service Bus-händelser
-    href: ../service-bus-messaging/service-bus-to-event-grid-integration-example.md?toc=%2fazure%2fevent-grid%2ftoc.json
-  - name: Strömma data med Event Hubs
-    href: event-grid-event-hubs-integration.md
-  - name: Routning för Media Services-händelser
-    href: ../media-services/latest/job-state-events-cli-how-to.md?toc=%2fazure%2fevent-grid%2ftoc.json
-  - name: Routning till hybridanslutning
-    href: custom-event-to-hybrid-connection.md
+    - name: E-postmeddelande när en virtuell dator ändras
+      href: monitor-virtual-machine-changes-event-grid-logic-app.md
+    - name: Ändra storlek på överförda bilder
+      href: resize-images-on-storage-blob-upload-event.md
+    - name: Utlösa Automation-runbook
+      href: ensure-tags-exists-on-new-virtual-machines.md
+    - name: E-postmeddelande när IoT Hub-enheter läggs till
+      href: publish-iot-hub-events-to-logic-apps.md
+    - name: Svara på Service Bus-händelser
+      href: ../service-bus-messaging/service-bus-to-event-grid-integration-example.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Strömma data med Event Hubs
+      href: event-grid-event-hubs-integration.md
+    - name: Routning för Media Services-händelser
+      href: ../media-services/latest/job-state-events-cli-how-to.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Routning till hybridanslutning
+      href: custom-event-to-hybrid-connection.md
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: cli-samples.md
-    items:
-    - name: Skapa anpassat ämne
-      href: scripts/event-grid-cli-create-custom-topic.md
-    - name: Prenumerera på Azure-prenumeration
-      href: scripts/event-grid-cli-azure-subscription.md
-    - name: Prenumerera på Blob Storage
-      href: scripts/event-grid-cli-blob.md
-    - name: Prenumerera på anpassat ämne
-      href: scripts/event-grid-cli-subscribe-custom-topic.md
-    - name: Prenumerera på resursgrupp
-      href: scripts/event-grid-cli-resource-group.md
-    - name: Prenumerera på och filtrera händelser för en resursgrupp
-      href: scripts/event-grid-cli-resource-group-filter.md
-  - name: Azure PowerShell
-    href: powershell-samples.md
-    items:
-    - name: Skapa anpassat ämne
-      href: scripts/event-grid-powershell-create-custom-topic.md
-    - name: Prenumerera på Azure-prenumeration
-      href: scripts/event-grid-powershell-azure-subscription.md
-    - name: Prenumerera på Blob Storage
-      href: scripts/event-grid-powershell-blob.md
-    - name: Prenumerera på anpassat ämne
-      href: scripts/event-grid-powershell-subscribe-custom-topic.md
-    - name: Prenumerera på resursgrupp
-      href: scripts/event-grid-powershell-resource-group.md
-    - name: Prenumerera på och filtrera händelser för en resursgrupp
-      href: scripts/event-grid-powershell-resource-group-filter.md
-  - name: Mallar för Resurshanteraren
-    href: template-samples.md
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?sort=0&service=event-grid
+    - name: Azure CLI
+      href: cli-samples.md
+      items:
+        - name: Skapa anpassat ämne
+          href: scripts/event-grid-cli-create-custom-topic.md
+        - name: Prenumerera på Azure-prenumeration
+          href: scripts/event-grid-cli-azure-subscription.md
+        - name: Prenumerera på Blob Storage
+          href: scripts/event-grid-cli-blob.md
+        - name: Prenumerera på anpassat ämne
+          href: scripts/event-grid-cli-subscribe-custom-topic.md
+        - name: Prenumerera på resursgrupp
+          href: scripts/event-grid-cli-resource-group.md
+        - name: Prenumerera på och filtrera händelser för en resursgrupp
+          href: scripts/event-grid-cli-resource-group-filter.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
+      items:
+        - name: Skapa anpassat ämne
+          href: scripts/event-grid-powershell-create-custom-topic.md
+        - name: Prenumerera på Azure-prenumeration
+          href: scripts/event-grid-powershell-azure-subscription.md
+        - name: Prenumerera på Blob Storage
+          href: scripts/event-grid-powershell-blob.md
+        - name: Prenumerera på anpassat ämne
+          href: scripts/event-grid-powershell-subscribe-custom-topic.md
+        - name: Prenumerera på resursgrupp
+          href: scripts/event-grid-powershell-resource-group.md
+        - name: Prenumerera på och filtrera händelser för en resursgrupp
+          href: scripts/event-grid-powershell-resource-group-filter.md
+    - name: Mallar för Resurshanteraren
+      href: template-samples.md
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=event-grid'
 - name: Begrepp
   items:
-  - name: Event Grid-begrepp
-    href: concepts.md
-  - name: Säkerhet och autentisering
-    href: security-authentication.md
-  - name: Leverans och nytt försök
-    href: delivery-and-retry.md
-  - name: Händelsefiltrering
-    href: event-filtering.md
-  - name: Händelsedomäner
-    href: event-domains.md
-  - name: Händelsekällor
-    href: event-sources.md
-  - name: Händelsehanterare
-    href: event-handlers.md
+    - name: Event Grid-begrepp
+      href: concepts.md
+    - name: Säkerhet och autentisering
+      href: security-authentication.md
+    - name: Leverans och nytt försök
+      href: delivery-and-retry.md
+    - name: Händelsefiltrering
+      href: event-filtering.md
+    - name: Händelsedomäner
+      href: event-domains.md
+    - name: Händelsekällor
+      href: event-sources.md
+    - name: Händelsehanterare
+      href: event-handlers.md
 - name: Instruktionsguider
   items:
-  - name: Skicka till anpassat ämne
-    href: post-to-custom-topic.md
-  - name: Ta emot händelser vid HTTP-slutpunkt
-    href: receive-events.md
-  - name: Obeställbara meddelanden och nytt försök
-    href: manage-event-delivery.md
-  - name: Filtrera händelser
-    href: how-to-filter-events.md
-  - name: Övervaka händelseleverans
-    href: monitor-event-delivery.md
-  - name: Prenumerationer på frågehändelser
-    href: query-event-subscriptions.md
-  - name: Prenumerera via portalen
-    href: subscribe-through-portal.md
-  - name: Mappa eget fält till schema
-    href: input-mappings.md
-  - name: Använd CloudEvents-schema
-    href: cloudevents-schema.md
-  - name: Hantera ämnen med händelsedomäner
-    href: how-to-event-domains.md
-  - name: Implementera redundans på klientsidan
-    href: custom-disaster-recovery.md
+    - name: Skicka till anpassat ämne
+      href: post-to-custom-topic.md
+    - name: Ta emot händelser vid HTTP-slutpunkt
+      href: receive-events.md
+    - name: Obeställbara meddelanden och nytt försök
+      href: manage-event-delivery.md
+    - name: Filtrera händelser
+      href: how-to-filter-events.md
+    - name: Övervaka händelseleverans
+      href: monitor-event-delivery.md
+    - name: Prenumerationer på frågehändelser
+      href: query-event-subscriptions.md
+    - name: Prenumerera via portalen
+      href: subscribe-through-portal.md
+    - name: Mappa eget fält till schema
+      href: input-mappings.md
+    - name: Använd CloudEvents-schema
+      href: cloudevents-schema.md
+    - name: Hantera ämnen med händelsedomäner
+      href: how-to-event-domains.md
+    - name: Implementera redundans på klientsidan
+      href: custom-disaster-recovery.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/eventgrid
-  - name: PowerShell
-    href: /powershell/module/az.eventgrid
-  - name: REST
-    href: /rest/api/eventgrid
-  - name: .NET
-    href: /dotnet/api/overview/azure/eventgrid
-  - name: Java
-    href: /java/api/overview/azure/eventgrid
-  - name: Python
-    href: /python/api/overview/azure/event-grid
-  - name: Node.js
-    href: /javascript/api/overview/azure/eventgrid
-  - name: Prenumerationsschema
-    href: subscription-creation-schema.md
-  - name: Händelseschema
-    href: event-schema.md
-    items:
-    - name: Azure-prenumerationer
-      href: event-schema-subscriptions.md
-    - name: Blob Storage
-      href: event-schema-blob-storage.md
-    - name: Container Registry
-      href: event-schema-container-registry.md
-    - name: Event Hubs
-      href: event-schema-event-hubs.md
-    - name: IoT Hub
-      href: event-schema-iot-hub.md
-    - name: Media Services
-      href: ../media-services/latest/media-services-event-schemas.md?toc=%2fazure%2fevent-grid%2ftoc.json
-    - name: Resursgrupper
-      href: event-schema-resource-groups.md
-    - name: Service Bus
-      href: event-schema-service-bus.md
-    - name: Azure Maps
-      href: event-schema-azure-maps.md
-  - name: Mallresurser
-    items:
-    - name: Prenumerationer på händelser
-      href: /azure/templates/microsoft.eventgrid/eventsubscriptions
-    - name: Ämnen
-      href: /azure/templates/microsoft.eventgrid/topics
-  - name: SDK:er
-    href: sdk-overview.md
+    - name: Azure CLI
+      href: /cli/azure/eventgrid
+    - name: PowerShell
+      href: /powershell/module/az.eventgrid
+    - name: REST
+      href: /rest/api/eventgrid
+    - name: .NET
+      href: /dotnet/api/overview/azure/eventgrid
+    - name: Java
+      href: /java/api/overview/azure/eventgrid
+    - name: Python
+      href: /python/api/overview/azure/event-grid
+    - name: Node.js
+      href: /javascript/api/overview/azure/eventgrid
+    - name: Prenumerationsschema
+      href: subscription-creation-schema.md
+    - name: Händelseschema
+      href: event-schema.md
+      items:
+        - name: Azure-prenumerationer
+          href: event-schema-subscriptions.md
+        - name: Blob Storage
+          href: event-schema-blob-storage.md
+        - name: Container Registry
+          href: event-schema-container-registry.md
+        - name: Event Hubs
+          href: event-schema-event-hubs.md
+        - name: IoT Hub
+          href: event-schema-iot-hub.md
+        - name: Media Services
+          href: ../media-services/latest/media-services-event-schemas.md?toc=%2fazure%2fevent-grid%2ftoc.json
+        - name: Resursgrupper
+          href: event-schema-resource-groups.md
+        - name: Service Bus
+          href: event-schema-service-bus.md
+        - name: Azure Maps
+          href: event-schema-azure-maps.md
+    - name: Mallresurser
+      items:
+        - name: Prenumerationer på händelser
+          href: /azure/templates/microsoft.eventgrid/eventsubscriptions
+        - name: Ämnen
+          href: /azure/templates/microsoft.eventgrid/topics
+    - name: 'SDK:er'
+      href: sdk-overview.md
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-event-grid
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/event-grid/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-eventgrid
-ms.openlocfilehash: 5bbf0a559ead7823c4224ce0c610054d23bcf458
-ms.sourcegitcommit: 1c2cf60ff7da5e1e01952ed18ea9a85ba333774c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/12/2019
-ms.locfileid: "59528024"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-event-grid
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/event-grid/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-eventgrid'
