--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -1,195 +1,188 @@
-items:
 - name: Dokumentation om Event Hubs
   href: ./index.yml
 - name: Översikt
   items:
-  - name: Vad är Event Hubs?
-    href: event-hubs-about.md
-  - name: Event Hubs för Apache Kafka
-    href: event-hubs-for-kafka-ecosystem-overview.md
-  - name: Event Hubs Capture
-    href: event-hubs-capture-overview.md
-  - name: Event Hubs Dedicated
-    href: event-hubs-dedicated-overview.md
+    - name: Vad är Event Hubs?
+      href: event-hubs-about.md
+    - name: Event Hubs för Apache Kafka
+      href: event-hubs-for-kafka-ecosystem-overview.md
+    - name: Event Hubs Capture
+      href: event-hubs-capture-overview.md
+    - name: Event Hubs Dedicated
+      href: event-hubs-dedicated-overview.md
 - name: Snabbstarter
-  items:
-  - name: Skapa en händelsehubb
-    items:
-    - name: Azure Portal
-      href: event-hubs-create.md
-    - name: Azure CLI
-      href: event-hubs-quickstart-cli.md
-    - name: Azure PowerShell
-      href: event-hubs-quickstart-powershell.md
-    - name: Azure Resource Manager-mall
-      href: event-hubs-resource-manager-namespace-event-hub.md
-  - name: Skicka och ta emot händelser
-    items:
-    - name: .NET Core
-      href: event-hubs-dotnet-standard-getstarted-send.md
-    - name: .NET Framework
-      href: event-hubs-dotnet-framework-getstarted-send.md
-    - name: Java
-      href: event-hubs-java-get-started-send.md
-    - name: Python
-      href: event-hubs-python-get-started-send.md
-    - name: Node.js
-      href: event-hubs-node-get-started-send.md
-    - name: Go
-      href: event-hubs-go-get-started-send.md
-    - name: C (skickar endast)
-      href: event-hubs-c-getstarted-send.md
-    - name: Apache Storm (tar endast emot)
-      href: event-hubs-storm-getstarted-receive.md
-  - name: Samla in händelser
-    items:
-    - name: Använda Azure Portal för att aktivera Event Hubs Capture
-      href: event-hubs-capture-enable-through-portal.md
-    - name: Använda en Resource Manager-mall för att aktivera Event Hubs Capture
-      href: event-hubs-resource-manager-namespace-event-hub-enable-capture.md
-    - name: Samla in Event Hubs-data med hjälp av Python
-      href: event-hubs-capture-python.md
-  - name: Strömma till Event Hubs för Apache Kafka
-    href: event-hubs-quickstart-kafka-enabled-event-hubs.md
   expanded: true
+  items:
+    - name: Skapa en händelsehubb
+      items:
+        - name: Azure Portal
+          href: event-hubs-create.md
+        - name: Azure CLI
+          href: event-hubs-quickstart-cli.md
+        - name: Azure PowerShell
+          href: event-hubs-quickstart-powershell.md
+        - name: Azure Resource Manager-mall
+          href: event-hubs-resource-manager-namespace-event-hub.md
+    - name: Skicka och ta emot händelser
+      items:
+        - name: .NET Core
+          href: event-hubs-dotnet-standard-getstarted-send.md
+        - name: .NET Framework
+          href: event-hubs-dotnet-framework-getstarted-send.md
+        - name: Java
+          href: event-hubs-java-get-started-send.md
+        - name: Python
+          href: event-hubs-python-get-started-send.md
+        - name: Node.js
+          href: event-hubs-node-get-started-send.md
+        - name: Go
+          href: event-hubs-go-get-started-send.md
+        - name: C (skickar endast)
+          href: event-hubs-c-getstarted-send.md
+        - name: Apache Storm (tar endast emot)
+          href: event-hubs-storm-getstarted-receive.md
+    - name: Samla in händelser
+      items:
+        - name: Använda Azure Portal för att aktivera Event Hubs Capture
+          href: event-hubs-capture-enable-through-portal.md
+        - name: Använda en Resource Manager-mall för att aktivera Event Hubs Capture
+          href: event-hubs-resource-manager-namespace-event-hub-enable-capture.md
+        - name: Samla in Event Hubs-data med hjälp av Python
+          href: event-hubs-capture-python.md
+    - name: Strömma till Event Hubs för Apache Kafka
+      href: event-hubs-quickstart-kafka-enabled-event-hubs.md
 - name: Självstudier
   items:
-  - name: Visualisera dataavvikelser på Event Hubs-dataströmmar
-    href: event-hubs-tutorial-visualize-anomalies.md
-  - name: Lagra insamlade data i SQL Data Warehouse
-    href: store-captured-data-data-warehouse.md
-  - name: Strömma data i Azure Databricks med Event Hubs
-    href: ../azure-databricks/databricks-stream-from-eventhubs.md
-    maintainContext: true
-  - name: Aktivera integrering av virtuella nätverk och brandväggar på Event Hubs-namnområde
-    href: event-hubs-tutorial-virtual-networks-firewalls.md
-  - name: Event Hubs för Apache Kafka
-    items:
-    - name: Spegla en asynkron Kafka-meddelandekö i en Apache Kafka-aktiverad händelsehubb
-      href: event-hubs-kafka-mirror-maker-tutorial.md
-    - name: Ansluta Apache Spark till en Apache Kafka-aktiverad händelsehubb
-      href: event-hubs-kafka-spark-tutorial.md
-    - name: Ansluta Apache Flink till en Apache Kafka-aktiverad händelsehubb
-      href: event-hubs-kafka-flink-tutorial.md
-    - name: Integrera Apache Kafka Connect med en Kafka-aktiverad händelsehubb (förhandsversion)
-      href: event-hubs-kafka-connect-tutorial.md
-    - name: Ansluta Akka Streams till en Apache Kafka-aktiverad händelsehubb
-      href: event-hubs-kafka-akka-streams-tutorial.md
+    - name: Visualisera dataavvikelser på Event Hubs-dataströmmar
+      href: event-hubs-tutorial-visualize-anomalies.md
+    - name: Lagra insamlade data i SQL Data Warehouse
+      href: store-captured-data-data-warehouse.md
+    - name: Strömma data i Azure Databricks med Event Hubs
+      href: ../azure-databricks/databricks-stream-from-eventhubs.md
+      maintainContext: true
+    - name: Aktivera integrering av virtuella nätverk och brandväggar på Event Hubs-namnområde
+      href: event-hubs-tutorial-virtual-networks-firewalls.md
+    - name: Event Hubs för Apache Kafka
+      items:
+        - name: Spegla en asynkron Kafka-meddelandekö i en Apache Kafka-aktiverad händelsehubb
+          href: event-hubs-kafka-mirror-maker-tutorial.md
+        - name: Ansluta Apache Spark till en Apache Kafka-aktiverad händelsehubb
+          href: event-hubs-kafka-spark-tutorial.md
+        - name: Ansluta Apache Flink till en Apache Kafka-aktiverad händelsehubb
+          href: event-hubs-kafka-flink-tutorial.md
+        - name: Integrera Apache Kafka Connect med en Kafka-aktiverad händelsehubb (förhandsversion)
+          href: event-hubs-kafka-connect-tutorial.md
+        - name: Ansluta Akka Streams till en Apache Kafka-aktiverad händelsehubb
+          href: event-hubs-kafka-akka-streams-tutorial.md
 - name: Exempel
   href: event-hubs-samples.md
 - name: Begrepp
   items:
-  - name: Event Hubs-funktioner
-    href: event-hubs-features.md
-  - name: Översikt över händelsebearbetningsvärd
-    href: event-hubs-event-processor-host.md
-  - name: Programmeringsguide
-    href: event-hubs-programming-guide.md
-  - name: Hanterad identitet för Azure-resurser
-    href: event-hubs-managed-service-identity.md
-  - name: Rollbaserad åtkomstkontroll (förhandsgranskning)
-    href: event-hubs-role-based-access-control.md
-  - name: Geo-haveriberedskap och geo-replikering
-    href: event-hubs-geo-dr.md
-  - name: Översikt över autentisering och säkerhetsmodell
-    href: event-hubs-authentication-and-security-model-overview.md
-  - name: Tillgänglighet och konsekvens
-    href: event-hubs-availability-and-consistency.md
-  - name: AMQP 1.0-protokollguide
-    href: ../service-bus-messaging/service-bus-amqp-protocol-guide.md
-    maintainContext: true
+    - name: Event Hubs-funktioner
+      href: event-hubs-features.md
+    - name: Översikt över händelsebearbetningsvärd
+      href: event-hubs-event-processor-host.md
+    - name: Programmeringsguide
+      href: event-hubs-programming-guide.md
+    - name: Hanterad identitet för Azure-resurser
+      href: event-hubs-managed-service-identity.md
+    - name: Rollbaserad åtkomstkontroll (förhandsgranskning)
+      href: event-hubs-role-based-access-control.md
+    - name: Geo-haveriberedskap och geo-replikering
+      href: event-hubs-geo-dr.md
+    - name: Översikt över autentisering och säkerhetsmodell
+      href: event-hubs-authentication-and-security-model-overview.md
+    - name: Tillgänglighet och konsekvens
+      href: event-hubs-availability-and-consistency.md
+    - name: AMQP 1.0-protokollguide
+      href: ../service-bus-messaging/service-bus-amqp-protocol-guide.md
+      maintainContext: true
 - name: Instruktionsguider
   items:
-  - name: Skicka, ta emot och samla in händelser med hjälp av Python
-    href: event-hubs-python.md
-  - name: Konfigurera diagnostikloggar
-    href: event-hubs-diagnostic-logs.md
-  - name: Event Hubs för Apache Kafka
-    items:
-    - name: Skapa Apache Kafka-aktiverade Event Hubs
-      href: event-hubs-create-kafka-enabled.md
-    - name: Bearbeta Apache Kafka för Event Hubs-händelser med Stream-analys
-      href: event-hubs-kafka-stream-analytics.md
-  - name: Hantera
-    items:
-    - name: Övervaka Event Hubs med Azure-övervakning
-      href: event-hubs-metrics-azure-monitor.md
-    - name: Event Hubs-hanteringsbibliotek
-      href: event-hubs-management-libraries.md
-  - name: Hämta Event Hubs-anslutningssträng
-    href: event-hubs-get-connection-string.md
-  - name: Java Development
-    items:
-    - name: Skapa en Spring Cloud Stream Binder-app
-      href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-azure-event-hub
-    - name: Använda Spring Boot Starter för Apache Kafka
-      href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-kafka-azure-event-hub
-  - name: Felsöka
-    items:
-    - name: Undantag
-      href: event-hubs-messaging-exceptions.md
-  - name: Använda brandväggar
-    href: event-hubs-ip-filtering.md
-  - name: Använda tjänstslutpunkter för virtuellt nätverk
-    href: event-hubs-service-endpoints.md
-  - name: Skala dataflödesenheter automatiskt
-    href: event-hubs-auto-inflate.md
-  - name: Strömma Azure Diagnostics-data med Event Hubs
-    href: event-hubs-streaming-azure-diags-data.md
-  - name: Utbyta händelser mellan program med olika protokoll
-    href: event-hubs-exchange-events-different-protocols.md
-  - name: Skapa ett Spring Cloud Stream Binder-program
-    href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-azure-event-hub?view=azure-java-stable
-    maintainContext: true
+    - name: 'Skicka, ta emot och samla in händelser med hjälp av Python'
+      href: event-hubs-python.md
+    - name: Konfigurera diagnostikloggar
+      href: event-hubs-diagnostic-logs.md
+    - name: Event Hubs för Apache Kafka
+      items:
+        - name: Skapa Apache Kafka-aktiverade Event Hubs
+          href: event-hubs-create-kafka-enabled.md
+        - name: Bearbeta Apache Kafka för Event Hubs-händelser med Stream-analys
+          href: event-hubs-kafka-stream-analytics.md
+    - name: Hantera
+      items:
+        - name: Övervaka Event Hubs med Azure-övervakning
+          href: event-hubs-metrics-azure-monitor.md
+        - name: Event Hubs-hanteringsbibliotek
+          href: event-hubs-management-libraries.md
+    - name: Hämta Event Hubs-anslutningssträng
+      href: event-hubs-get-connection-string.md
+    - name: Java Development
+      items:
+        - name: Skapa en Spring Cloud Stream Binder-app
+          href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-azure-event-hub
+        - name: Använda Spring Boot Starter för Apache Kafka
+          href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-kafka-azure-event-hub
+    - name: Felsöka
+      items:
+        - name: Undantag
+          href: event-hubs-messaging-exceptions.md
+    - name: Använda brandväggar
+      href: event-hubs-ip-filtering.md
+    - name: Använda tjänstslutpunkter för virtuellt nätverk
+      href: event-hubs-service-endpoints.md
+    - name: Skala dataflödesenheter automatiskt
+      href: event-hubs-auto-inflate.md
+    - name: Strömma Azure Diagnostics-data med Event Hubs
+      href: event-hubs-streaming-azure-diags-data.md
+    - name: Utbyta händelser mellan program med olika protokoll
+      href: event-hubs-exchange-events-different-protocols.md
+    - name: Skapa ett Spring Cloud Stream Binder-program
+      href: /java/azure/spring-framework/configure-spring-cloud-stream-binder-java-app-azure-event-hub?view=azure-java-stable
+      maintainContext: true
 - name: Referens
   items:
-  - name: Java
-    items:
-    - name: com.microsoft.azure.eventhubs
-      href: /java/api/com.microsoft.azure.eventhubs
-    - name: com.microsoft.azure.eventprocessorhost
-      href: /java/api/com.microsoft.azure.eventprocessorhost
-  - name: .NET
-    items:
-    - name: Microsoft.Azure.EventHubs
-      href: /dotnet/api/microsoft.azure.eventhubs
-    - name: Microsoft.Azure.EventHubs.Processor
-      href: /dotnet/api/microsoft.azure.eventhubs.processor
-    - name: Microsoft.ServiceBus.Messaging
-      href: /dotnet/api/microsoft.servicebus.messaging
-    - name: Microsoft.ServiceBus.Messaging.EventProcessorHost
-      href: /dotnet/api/microsoft.servicebus.messaging.eventprocessorhost
-    - name: Microsoft.Azure.Management.EventHub
-      href: /dotnet/api/microsoft.azure.management.eventhub
-  - name: Node.js
-    href: /javascript/api/overview/azure/event-hub?view=azure-node-latest
-  - name: REST
-    href: /rest/api/eventhub
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.eventhub/allversions
-  - name: Kvoter
-    href: event-hubs-quotas.md
+    - name: Java
+      items:
+        - name: com.microsoft.azure.eventhubs
+          href: /java/api/com.microsoft.azure.eventhubs
+        - name: com.microsoft.azure.eventprocessorhost
+          href: /java/api/com.microsoft.azure.eventprocessorhost
+    - name: .NET
+      items:
+        - name: Microsoft.Azure.EventHubs
+          href: /dotnet/api/microsoft.azure.eventhubs
+        - name: Microsoft.Azure.EventHubs.Processor
+          href: /dotnet/api/microsoft.azure.eventhubs.processor
+        - name: Microsoft.ServiceBus.Messaging
+          href: /dotnet/api/microsoft.servicebus.messaging
+        - name: Microsoft.ServiceBus.Messaging.EventProcessorHost
+          href: /dotnet/api/microsoft.servicebus.messaging.eventprocessorhost
+        - name: Microsoft.Azure.Management.EventHub
+          href: /dotnet/api/microsoft.azure.management.eventhub
+    - name: Node.js
+      href: /javascript/api/overview/azure/event-hub?view=azure-node-latest
+    - name: REST
+      href: /rest/api/eventhub
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.eventhub/allversions
+    - name: Kvoter
+      href: event-hubs-quotas.md
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-event-hubs
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: event-hubs-faq.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/event-hubs/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=event-hubs
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-eventhub
-  - name: Videoklipp
-    href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: 76b72dfcd7db1e27be5a94af35da1e83f104e75e
-ms.sourcegitcommit: c3d1aa5a1d922c172654b50a6a5c8b2a6c71aa91
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/17/2019
-ms.locfileid: "59681003"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-event-hubs
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: event-hubs-faq.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/event-hubs/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=event-hubs'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-eventhub'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=event-hubs'
