--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 67299955e00f2bb5fb409420dd951357f89e1996
-ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49384930"
 documentType: LandingData
 title: Dokumentation om Azure IoT Central
 metadata:
-  title: Dokumentation om Azure IoT Central – självstudier, API-referens | Microsoft Docs
-  description: Azure IoT Central är en fullständigt hanterad SaaS-lösning (programvara som en tjänst) som gör det enkelt att ansluta, övervaka och hantera IoT-tillgångar i skala. Azure IoT Central förenklar den inledande installationen av IoT-lösningen och minskar administrationen och sänker driftkostnaderna och de övergripande kostnaderna för ett typiskt IoT-projekt. Lär dig hur du skapar, anpassar, hanterar och använder ett Azure IoT Central-program med våra snabbstarter och självstudier.
+  title: 'Dokumentation om Azure IoT Central – självstudier, API-referens | Microsoft Docs'
+  description: 'Azure IoT Central är en fullständigt hanterad SaaS-lösning (programvara som en tjänst) som gör det enkelt att ansluta, övervaka och hantera IoT-tillgångar i skala. Azure IoT Central förenklar den inledande installationen av IoT-lösningen och minskar administrationen och sänker driftkostnaderna och de övergripande kostnaderna för ett typiskt IoT-projekt. Lär dig hur du skapar, anpassar, hanterar och använder ett Azure IoT Central-program med våra snabbstarter och självstudier.'
   author: dominicbetts
   ms.topic: landing-page
   ms.date: 11/08/2017
@@ -18,25 +12,25 @@ metadata:
   services: iot-central
   manager: timlt
 abstract:
-  description: Azure IoT Central är en fullständigt hanterad SaaS-lösning (programvara som en tjänst) som gör det enkelt att ansluta, övervaka och hantera IoT-tillgångar i skala. Azure IoT Central förenklar den inledande installationen av IoT-lösningen och minskar administrationen och sänker driftkostnaderna och de övergripande kostnaderna för ett typiskt IoT-projekt. Lär dig hur du skapar, anpassar, hanterar och använder ett Azure IoT Central-program med våra snabbstarter och självstudier.
+  description: 'Azure IoT Central är en fullständigt hanterad SaaS-lösning (programvara som en tjänst) som gör det enkelt att ansluta, övervaka och hantera IoT-tillgångar i skala. Azure IoT Central förenklar den inledande installationen av IoT-lösningen och minskar administrationen och sänker driftkostnaderna och de övergripande kostnaderna för ett typiskt IoT-projekt. Lär dig hur du skapar, anpassar, hanterar och använder ett Azure IoT Central-program med våra snabbstarter och självstudier.'
 sections:
-- title: Funktionsavisering
-  items:
-  - type: paragraph
-    text: Azure IoT Central har övergått till att använda IoT Hub Device Provisioning Service (DPS) för alla enhetsanslutningar. Du måste använda DPS SDK för att registrera och ansluta enheter till ditt Azure IoT Central-program. <a href="https://docs.microsoft.com/azure/iot-central/concepts-connectivity">Läs mer om enhetsanslutning i Azure IoT Central.</a> Alla program som använder den kontinuerliga funktionen för dataexport och/eller lösningsmallen för Power BI måste ändra mållagringscontainer och skapa en ny lösningsmall.
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du <a href="quick-deploy-iot-central">skapar ett nytt Azure IoT Central-program</a>.
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du anpassar och använder det nya Azure IoT Central-programmet.
-  - type: list
-    style: ordered
+  - title: Funktionsavisering
     items:
-    - html: <a href="tutorial-define-device-type">Definiera en ny enhetstyp</a>
-    - html: <a href="tutorial-configure-rules">Konfigurera regler</a>
-    - html: <a href="tutorial-customize-operator">Anpassa operator-vyn</a>
-    - html: <a href="tutorial-monitor-devices">Övervaka dina enheter</a>
-    - html: <a href="tutorial-add-device">Lägga till en riktig enhet</a>
+      - type: paragraph
+        text: 'Azure IoT Central har övergått till att använda IoT Hub Device Provisioning Service (DPS) för alla enhetsanslutningar. Du måste använda DPS SDK för att registrera och ansluta enheter till ditt Azure IoT Central-program. <a href="https://docs.microsoft.com/azure/iot-central/concepts-connectivity">Läs mer om enhetsanslutning i Azure IoT Central.</a> Alla program som använder den kontinuerliga funktionen för dataexport och/eller lösningsmallen för Power BI måste ändra mållagringscontainer och skapa en ny lösningsmall.'
+  - title: Snabbstarter på 5 minuter
+    items:
+      - type: paragraph
+        text: Lär dig hur du <a href="quick-deploy-iot-central">skapar ett nytt Azure IoT Central-program</a>.
+  - title: Steg för steg-självstudier
+    items:
+      - type: paragraph
+        text: Lär dig hur du anpassar och använder det nya Azure IoT Central-programmet.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="tutorial-define-device-type">Definiera en ny enhetstyp</a>
+          - html: <a href="tutorial-configure-rules">Konfigurera regler</a>
+          - html: <a href="tutorial-customize-operator">Anpassa operator-vyn</a>
+          - html: <a href="tutorial-monitor-devices">Övervaka dina enheter</a>
+          - html: <a href="tutorial-add-device">Lägga till en riktig enhet</a>
