--- a/articles/jenkins/index.yml
+++ b/articles/jenkins/index.yml
@@ -1,69 +1,63 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: e94a667cb67e4812984d4a338e763ebeaa1d3205
-ms.sourcegitcommit: fbf0124ae39fa526fc7e7768952efe32093e3591
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54073228"
 documentType: LandingData
 title: Jenkins på Azure
 metadata:
-  title: Dokumentation om Jenkins på Azure – självstudier, exempel, referenser och resurser
+  title: 'Dokumentation om Jenkins på Azure – självstudier, exempel, referenser och resurser'
   description: Distribuera och integrera Jenkins med Azure
   ms.service: jenkins
-  keywords: jenkins, azure, devops, självstudier, exempel, referenser
+  keywords: 'jenkins, azure, devops, självstudier, exempel, referenser'
   author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
   ms.date: 08/27/2018
 abstract:
-  description: Använd Jenkins-servern med öppen källkod för att skapa dina appar i molnet och distribuera dem till Azure. Lär dig hur du installerar, konfigurerar och skalar Jenkins på Azure samt konfigurerar kontinuerlig integrering (CI) för dina appar med våra snabbstarter, självstudier och exempel på pipeliner.
+  description: 'Använd Jenkins-servern med öppen källkod för att skapa dina appar i molnet och distribuera dem till Azure. Lär dig hur du installerar, konfigurerar och skalar Jenkins på Azure samt konfigurerar kontinuerlig integrering (CI) för dina appar med våra snabbstarter, självstudier och exempel på pipeliner.'
   aside:
     image:
       alt: Jenkins-logotyp
       height: 133
       width: 110
       src: media/Jenkins.png
-    title: 
+    title: null
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
+  - title: Snabbstarter på 5 minuter
+    items:
+      - type: paragraph
+        text: Skapa ett Jenkins-system i Azure och skapa en app.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/jenkins/install-jenkins-solution-template'
+  - title: Steg för steg-självstudier
+    items:
+      - type: paragraph
+        text: 'Konfigurera kontinuerlig integrering för dina appar, kör agenter i molnet och använd Azure-tjänster i dina jobb.'
+      - type: list
+        style: ordered
+        items:
+          - html: 'Konfigurera CI i <a href="/azure/jenkins/java-deploy-webapp-tutorial">Azure App Service</a>, <a href="/azure/container-service/kubernetes/container-service-kubernetes-jenkins">Kubernetes</a> eller en <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">virtuell Linux-dator</a>.'
+          - html: <a href="/azure/jenkins/execute-cli-jenkins-pipeline">Etablera resurser i ett pipeline-jobb</a>.
+          - html: <a href="/azure/jenkins/jenkins-azure-vm-agents">Skala med Azure VM-agenter</a>.
+  - title: Exempel
+    items:
+      - type: paragraph
+        text: Exempel på skript och faser för dina pipeliner.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '<a href="https://github.com/Azure/azure-devops-utils/tree/master/jenkins">Faser och kodavsnitt för Jenkinsfile</a>'
+  - title: Referens
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Plugin-program
+            html: '<p><a href="https://plugins.jenkins.io/azure-vm-agents">Agenter för virtuell Azure-dator</a><p><a href="https://plugins.jenkins.io/azure-app-service">Azure App Service</a></p><p><a href="https://plugins.jenkins.io/windows-azure-storage">Azure Storage</a></p><p><a href="https://plugins.jenkins.io/azure-container-agents">Azure Container Agents</a><p><a href="https://plugins.jenkins.io/azure-function">Plugin-program för Azure Function</a><p><a href="https://plugins.jenkins.io/azure-acs">Plugin-program för Azure Container Service</a>'
   - type: paragraph
-    text: Skapa ett Jenkins-system i Azure och skapa en app.
-  - type: list
-    style: icon48
-    items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/jenkins/install-jenkins-solution-template
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Konfigurera kontinuerlig integrering för dina appar, kör agenter i molnet och använd Azure-tjänster i dina jobb.
-  - type: list
-    style: ordered
-    items:
-    - html: Konfigurera CI i <a href="/azure/jenkins/java-deploy-webapp-tutorial">Azure App Service</a>, <a href="/azure/container-service/kubernetes/container-service-kubernetes-jenkins">Kubernetes</a> eller en <a href="/azure/virtual-machines/linux/tutorial-jenkins-github-docker-cicd">virtuell Linux-dator</a>.
-    - html: <a href="/azure/jenkins/execute-cli-jenkins-pipeline">Etablera resurser i ett pipeline-jobb</a>.
-    - html: <a href="/azure/jenkins/jenkins-azure-vm-agents">Skala med Azure VM-agenter</a>.
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Exempel på skript och faser för dina pipeliner.
-  - type: list
-    style: unordered
-    className: spaced noBullet
-    items:
-    - html: <a href="https://github.com/Azure/azure-devops-utils/tree/master/jenkins">Faser och kodavsnitt för Jenkinsfile</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Plugin-program
-      html: <p><a href="https://plugins.jenkins.io/azure-vm-agents">Agenter för virtuell Azure-dator</a><p><a href="https://plugins.jenkins.io/azure-app-service">Azure App Service</a></p><p><a href="https://plugins.jenkins.io/windows-azure-storage">Azure Storage</a></p><p><a href="https://plugins.jenkins.io/azure-container-agents">Azure Container Agents</a><p><a href="https://plugins.jenkins.io/azure-function">Plugin-program för Azure Function</a><p><a href="https://plugins.jenkins.io/azure-acs">Plugin-program för Azure Container Service</a>
-- type: paragraph
-  text: <h4>Jenkins® är ett registrerat varumärke som tillhör Software in the Public Interest, Inc. [Jenkins®-logotypen](https://wiki.jenkins.io/display/JENKINS/Logo) är licensierad under [CC BY SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) från [Jenkins-projektet](https://jenkins.io).</h4>
+    text: '<h4>Jenkins® är ett registrerat varumärke som tillhör Software in the Public Interest, Inc. [Jenkins®-logotypen](https://wiki.jenkins.io/display/JENKINS/Logo) är licensierad under [CC BY SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/) från [Jenkins-projektet](https://jenkins.io).</h4>'
