--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -1,200 +1,193 @@
-items:
 - name: Dokumentation om lastbalanserare
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är lastbalanserare?
-    href: load-balancer-overview.md
+    - name: Vad är lastbalanserare?
+      href: load-balancer-overview.md
 - name: Snabbstart
   items:
-  - name: Skapa en Basic Load Balancer – Portal
-    href: quickstart-create-basic-load-balancer-portal.md
-  - name: Skapa en Basic Load Balancer – Azure CLI
-    href: quickstart-create-basic-load-balancer-cli.md
-  - name: Skapa en Basic Load Balancer – Azure PowerShell
-    href: quickstart-create-basic-load-balancer-powershell.md
-  - name: Skapa en Standard Load Balancer – Portal
-    href: quickstart-load-balancer-standard-public-portal.md
-  - name: Skapa en Standard Load Balancer – Azure CLI
-    href: quickstart-load-balancer-standard-public-cli.md
-  - name: Skapa en Standard Load Balancer – Azure PowerShell
-    href: quickstart-create-standard-load-balancer-powershell.md
+    - name: Skapa en Basic Load Balancer – Portal
+      href: quickstart-create-basic-load-balancer-portal.md
+    - name: Skapa en Basic Load Balancer – Azure CLI
+      href: quickstart-create-basic-load-balancer-cli.md
+    - name: Skapa en Basic Load Balancer – Azure PowerShell
+      href: quickstart-create-basic-load-balancer-powershell.md
+    - name: Skapa en Standard Load Balancer – Portal
+      href: quickstart-load-balancer-standard-public-portal.md
+    - name: Skapa en Standard Load Balancer – Azure CLI
+      href: quickstart-load-balancer-standard-public-cli.md
+    - name: Skapa en Standard Load Balancer – Azure PowerShell
+      href: quickstart-create-standard-load-balancer-powershell.md
 - name: Självstudier
   items:
-  - name: Belastningsutjämna Internettrafik till virtuella datorer
-    href: tutorial-load-balancer-standard-manage-portal.md
-  - name: Belastningsutjämna intern trafik till virtuella datorer
-    href: tutorial-load-balancer-basic-internal-portal.md
-  - name: Belastningsutjämna virtuella datorer mellan tillgänglighetszoner
-    href: tutorial-load-balancer-standard-public-zone-redundant-portal.md
-  - name: Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon
-    href: tutorial-load-balancer-standard-public-zonal-portal.md
-  - name: Konfigurera portvidarebefordran i Load Balancer
-    href: tutorial-load-balancer-port-forwarding-portal.md
+    - name: Belastningsutjämna Internettrafik till virtuella datorer
+      href: tutorial-load-balancer-standard-manage-portal.md
+    - name: Belastningsutjämna intern trafik till virtuella datorer
+      href: tutorial-load-balancer-basic-internal-portal.md
+    - name: Belastningsutjämna virtuella datorer mellan tillgänglighetszoner
+      href: tutorial-load-balancer-standard-public-zone-redundant-portal.md
+    - name: Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon
+      href: tutorial-load-balancer-standard-public-zonal-portal.md
+    - name: Konfigurera portvidarebefordran i Load Balancer
+      href: tutorial-load-balancer-port-forwarding-portal.md
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: cli-samples.md
-  - name: Azure PowerShell
-    href: powershell-samples.md
+    - name: Azure CLI
+      href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
 - name: Begrepp
   items:
-  - name: Vad är Standard Load Balancer?
-    href: load-balancer-standard-overview.md
-  - name: Hälsotillståndsavsökningar
-    href: load-balancer-custom-probe-overview.md
-  - name: Portar med hög tillgänglighet
-    href: load-balancer-ha-ports-overview.md
-  - name: IPv6-stöd
-    href: load-balancer-ipv6-overview.md
-  - name: Flera klienter
-    href: load-balancer-multivip-overview.md
-  - name: Utgående anslutningar
-    href: load-balancer-outbound-connections.md
-  - name: Regler för utgående trafik
-    href: load-balancer-outbound-rules-overview.md
-  - name: TCP-återställning vid tidsgräns för inaktivitet
-    href: load-balancer-tcp-reset.md
-  - name: Standard Load Balancer och tillgänglighetszoner
-    href: load-balancer-standard-availability-zones.md
-  - name: Mått och diagnostik för Standard Load Balancer
-    href: load-balancer-standard-diagnostics.md
+    - name: Vad är Standard Load Balancer?
+      href: load-balancer-standard-overview.md
+    - name: Hälsotillståndsavsökningar
+      href: load-balancer-custom-probe-overview.md
+    - name: Portar med hög tillgänglighet
+      href: load-balancer-ha-ports-overview.md
+    - name: IPv6-stöd
+      href: load-balancer-ipv6-overview.md
+    - name: Flera klienter
+      href: load-balancer-multivip-overview.md
+    - name: Utgående anslutningar
+      href: load-balancer-outbound-connections.md
+    - name: Regler för utgående trafik
+      href: load-balancer-outbound-rules-overview.md
+    - name: TCP-återställning vid tidsgräns för inaktivitet
+      href: load-balancer-tcp-reset.md
+    - name: Standard Load Balancer och tillgänglighetszoner
+      href: load-balancer-standard-availability-zones.md
+    - name: Mått och diagnostik för Standard Load Balancer
+      href: load-balancer-standard-diagnostics.md
 - name: Gör så här för att
   items:
-  - name: Skapa en zonredundant offentlig Standard Load Balancer
-    href: load-balancer-get-started-internet-az-portal.md
-    items:
-    - name: Skapa en zonredundant offentlig Standard Load Balancer (PowerShell)
-      href: load-balancer-get-started-internet-az-powershell.md
-    - name: Skapa en zonredundant offentlig Standard Load Balancer (CLI)
-      href: load-balancer-get-started-internet-az-cli.md
-  - name: Skapa en zonindelad offentlig Standard Load Balancer
-    href: load-balancer-get-started-internet-availability-zones-zonal-portal.md
-    items:
-    - name: Skapa en zonindelad offentlig Standard Load Balancer (PowerShell)
-      href: load-balancer-get-started-internet-availability-zones-zonal-powershell.md
-    - name: Skapa en zonredundant offentlig Standard Load Balancer (CLI)
-      href: load-balancer-get-started-internet-availability-zones-zonal-cli.md
-  - name: Belastningsutjämna virtuella datorer mellan tillgänglighetszoner (CLI)
-    href: load-balancer-standard-public-zone-redundant-cli.md
-  - name: Belastningsutjämna virtuella datorer inom en zon (CLI)
-    href: load-balancer-standard-public-zonal-cli.md
-  - name: Konfigurera regler för utgående trafik
-    href: configure-load-balancer-outbound-cli.md
-  - name: Skapa en Azure Load Balancer med REST API
-    href: create-load-balancer-rest-api.md
-  - name: Skapa en Basic Load Balancer (mall)
-    href: load-balancer-get-started-internet-arm-template.md
-  - name: Skapa offentlig Load Balancer med IPv6
-    href: load-balancer-ipv6-internet-ps.md
-    items:
-    - name: Skapa offentlig Load Balancer med IPv6 (CLI)
-      href: load-balancer-ipv6-internet-cli.md
-    - name: Skapa offentlig Load Balancer med IPv6 (mall)
-      href: load-balancer-ipv6-internet-template.md
-  - name: Konfigurera intern Load Balancer
-    items:
-    - name: Konfigurera intern Load Balancer (PowerShell)
-      href: load-balancer-get-started-ilb-arm-ps.md
-    - name: Konfigurera intern Load Balancer (CLI)
-      href: load-balancer-get-started-ilb-arm-cli.md
-    - name: Konfigurera intern Load Balancer (mall)
-      href: load-balancer-get-started-ilb-arm-template.md
-  - name: Konfigurera TCP-tidsgräns vid inaktivitet för lastbalanserare
-    href: load-balancer-tcp-idle-timeout.md
-  - name: Konfigurera distributionsläge för Load Balancer
-    href: load-balancer-distribution-mode.md
-  - name: Kombinera tjänster för belastningsutjämning
-    href: ../traffic-manager/traffic-manager-load-balancing-azure.md?toc=%2fazure%2fload-balancer%2ftoc.json
-  - name: Använd flera IP-konfigurationer
-    href: load-balancer-multiple-ip.md
-    items:
-    - name: Använd flera IP-konfigurationer (CLI)
-      href: load-balancer-multiple-ip-cli.md
-    - name: Använda flera IP-konfigurationer (PowerShell)
-      href: load-balancer-multiple-ip-powershell.md
-  - name: Azure Monitor-loggar för Azure Load Balancer
-    href: load-balancer-monitor-log.md
-  - name: Hämta Load Balancer-mått med REST
-    href: load-balancer-query-metrics-rest-api.md
-  - name: Konfigurera portar med hög tillgänglighet för intern Azure Load Balancer
-    href: load-balancer-configure-ha-ports.md
-  - name: Felsöka
-    items:
-    - name: Felsök Azure Load Balancer
-      href: load-balancer-troubleshoot.md
-  - name: Artiklar om den klassiska distributionsmodellen
-    items:
-    - name: Utgående anslutningar (klassiska)
-      href: load-balancer-outbound-connections-classic.md
-  - name: Konfigurera flera VIP för molntjänst
-    href: load-balancer-multivip.md
-    items:
-    - name: Konfigurera intern Load Balancer för Cloud Services
-      href: load-balancer-get-started-ilb-classic-cloud.md
+    - name: Skapa en zonredundant offentlig Standard Load Balancer
+      href: load-balancer-get-started-internet-az-portal.md
       items:
-      - name: Konfigurera intern Load Balancer för Cloud Services (PowerShell)
-        href: load-balancer-get-started-ilb-classic-ps.md
-      - name: Konfigurera intern Load Balancer för Cloud Services (CLI)
-        href: load-balancer-get-started-ilb-classic-cli.md
-    - name: Konfigurera offentlig Load Balancer (klassisk PowerShell)
-      href: load-balancer-get-started-internet-classic-ps.md
+        - name: Skapa en zonredundant offentlig Standard Load Balancer (PowerShell)
+          href: load-balancer-get-started-internet-az-powershell.md
+        - name: Skapa en zonredundant offentlig Standard Load Balancer (CLI)
+          href: load-balancer-get-started-internet-az-cli.md
+    - name: Skapa en zonindelad offentlig Standard Load Balancer
+      href: load-balancer-get-started-internet-availability-zones-zonal-portal.md
       items:
-      - name: Konfigurera offentlig Load Balancer (klassiskt moln)
-        href: load-balancer-get-started-internet-classic-cloud.md
-      - name: Konfigurera offentlig Load Balancer (klassiskt CLI)
-        href: load-balancer-get-started-internet-classic-cli.md
+        - name: Skapa en zonindelad offentlig Standard Load Balancer (PowerShell)
+          href: load-balancer-get-started-internet-availability-zones-zonal-powershell.md
+        - name: Skapa en zonredundant offentlig Standard Load Balancer (CLI)
+          href: load-balancer-get-started-internet-availability-zones-zonal-cli.md
+    - name: Belastningsutjämna virtuella datorer mellan tillgänglighetszoner (CLI)
+      href: load-balancer-standard-public-zone-redundant-cli.md
+    - name: Belastningsutjämna virtuella datorer inom en zon (CLI)
+      href: load-balancer-standard-public-zonal-cli.md
+    - name: Konfigurera regler för utgående trafik
+      href: configure-load-balancer-outbound-cli.md
+    - name: Skapa en Azure Load Balancer med REST API
+      href: create-load-balancer-rest-api.md
+    - name: Skapa en Basic Load Balancer (mall)
+      href: load-balancer-get-started-internet-arm-template.md
+    - name: Skapa offentlig Load Balancer med IPv6
+      href: load-balancer-ipv6-internet-ps.md
+      items:
+        - name: Skapa offentlig Load Balancer med IPv6 (CLI)
+          href: load-balancer-ipv6-internet-cli.md
+        - name: Skapa offentlig Load Balancer med IPv6 (mall)
+          href: load-balancer-ipv6-internet-template.md
+    - name: Konfigurera intern Load Balancer
+      items:
+        - name: Konfigurera intern Load Balancer (PowerShell)
+          href: load-balancer-get-started-ilb-arm-ps.md
+        - name: Konfigurera intern Load Balancer (CLI)
+          href: load-balancer-get-started-ilb-arm-cli.md
+        - name: Konfigurera intern Load Balancer (mall)
+          href: load-balancer-get-started-ilb-arm-template.md
+    - name: Konfigurera TCP-tidsgräns vid inaktivitet för lastbalanserare
+      href: load-balancer-tcp-idle-timeout.md
+    - name: Konfigurera distributionsläge för Load Balancer
+      href: load-balancer-distribution-mode.md
+    - name: Kombinera tjänster för belastningsutjämning
+      href: ../traffic-manager/traffic-manager-load-balancing-azure.md?toc=%2fazure%2fload-balancer%2ftoc.json
+    - name: Använd flera IP-konfigurationer
+      href: load-balancer-multiple-ip.md
+      items:
+        - name: Använd flera IP-konfigurationer (CLI)
+          href: load-balancer-multiple-ip-cli.md
+        - name: Använda flera IP-konfigurationer (PowerShell)
+          href: load-balancer-multiple-ip-powershell.md
+    - name: Azure Monitor-loggar för Azure Load Balancer
+      href: load-balancer-monitor-log.md
+    - name: Hämta Load Balancer-mått med REST
+      href: load-balancer-query-metrics-rest-api.md
+    - name: Konfigurera portar med hög tillgänglighet för intern Azure Load Balancer
+      href: load-balancer-configure-ha-ports.md
+    - name: Felsöka
+      items:
+        - name: Felsök Azure Load Balancer
+          href: load-balancer-troubleshoot.md
+    - name: Artiklar om den klassiska distributionsmodellen
+      items:
+        - name: Utgående anslutningar (klassiska)
+          href: load-balancer-outbound-connections-classic.md
+    - name: Konfigurera flera VIP för molntjänst
+      href: load-balancer-multivip.md
+      items:
+        - name: Konfigurera intern Load Balancer för Cloud Services
+          href: load-balancer-get-started-ilb-classic-cloud.md
+          items:
+            - name: Konfigurera intern Load Balancer för Cloud Services (PowerShell)
+              href: load-balancer-get-started-ilb-classic-ps.md
+            - name: Konfigurera intern Load Balancer för Cloud Services (CLI)
+              href: load-balancer-get-started-ilb-classic-cli.md
+        - name: Konfigurera offentlig Load Balancer (klassisk PowerShell)
+          href: load-balancer-get-started-internet-classic-ps.md
+          items:
+            - name: Konfigurera offentlig Load Balancer (klassiskt moln)
+              href: load-balancer-get-started-internet-classic-cloud.md
+            - name: Konfigurera offentlig Load Balancer (klassiskt CLI)
+              href: load-balancer-get-started-internet-classic-cli.md
 - name: Referens
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=load-balancer
-  - name: Azure PowerShell
-    href: /powershell/module/az.network
-  - name: Azure CLI
-    href: /cli/azure/network/lb
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.management.network.models
-  - name: Java
-    href: /java/api/com.microsoft.azure.management.network
-  - name: Node.js
-    href: http://azure.github.io/azure-sdk-for-node/azure-arm-network/latest/LoadBalancers.html
-  - name: Ruby
-    href: http://www.rubydoc.info/gems/azure_mgmt_network/Azure/ARM/Network/LoadBalancers
-  - name: Python
-    href: http://azure-sdk-for-python.readthedocs.io/en/latest/ref/azure.mgmt.network.operations.html#azure.mgmt.network.operations.LoadBalancersOperations
-  - name: REST
-    href: https://msdn.microsoft.com/library/azure/mt163651.aspx
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=load-balancer'
+    - name: Azure PowerShell
+      href: /powershell/module/az.network
+    - name: Azure CLI
+      href: /cli/azure/network/lb
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.management.network.models
+    - name: Java
+      href: /java/api/com.microsoft.azure.management.network
+    - name: Node.js
+      href: 'http://azure.github.io/azure-sdk-for-node/azure-arm-network/latest/LoadBalancers.html'
+    - name: Ruby
+      href: 'http://www.rubydoc.info/gems/azure_mgmt_network/Azure/ARM/Network/LoadBalancers'
+    - name: Python
+      href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/ref/azure.mgmt.network.operations.html#azure.mgmt.network.operations.LoadBalancersOperations'
+    - name: REST
+      href: 'https://msdn.microsoft.com/library/azure/mt163651.aspx'
 - name: Relaterat
   items:
-  - name: Application Gateway
-    href: /azure/application-gateway/
-  - name: Express Route
-    href: /azure/expressroute/
-  - name: Virtual Network
-    href: /azure/virtual-network/
-  - name: VPN Gateway
-    href: /azure/vpn-gateway/
-  - name: Virtuell dator
-    href: /azure/virtual-machines/
-  - name: Traffic Manager
-    href: /azure/traffic-manager/
-  - name: DNS
-    href: /azure/dns/
+    - name: Application Gateway
+      href: /azure/application-gateway/
+    - name: Express Route
+      href: /azure/expressroute/
+    - name: Virtual Network
+      href: /azure/virtual-network/
+    - name: VPN Gateway
+      href: /azure/vpn-gateway/
+    - name: Virtuell dator
+      href: /azure/virtual-machines/
+    - name: Traffic Manager
+      href: /azure/traffic-manager/
+    - name: DNS
+      href: /azure/dns/
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-virtual-machines
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=networking
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/load-balancer/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=load-balancer
-ms.openlocfilehash: be96720e5dd488c9a5baf722a26901b9620f861d
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59790703"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-virtual-machines
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/load-balancer/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=load-balancer'
