--- a/articles/managed-applications/index.yml
+++ b/articles/managed-applications/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 353616141e37e8024695fad81a16c9c2f3b82625
-ms.sourcegitcommit: fec0e51a3af74b428d5cc23b6d0835ed0ac1e4d8
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56107352"
 documentType: LandingData
 title: Dokumentation om Azure-hanterade program
 metadata:
-  title: Dokumentation om Azure-hanterade program – självstudier, API-referens
+  title: 'Dokumentation om Azure-hanterade program – självstudier, API-referens'
   description: Använd Azure-hanterade program för att publicera molnlösningar som är enklare för kunderna att hantera.
   services: managed-applications
   author: tfitzmac
@@ -22,35 +16,35 @@ metadata:
 abstract:
   description: Med Azure-hanterade program kan du erbjuda dina molnlösningar till interna och externa kunder. Du definierar infrastrukturen för lösningen samt villkoren för kontinuerlig hantering av lösningen. Faktureringen för lösningen hanteras genom Azure-fakturering.
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du publicerar och distribuerar ett hanterat program.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/managed-applications/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/managed-applications/managed-apps-quickstart-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du utvecklar och hanterade program och erbjuder dem via Azure Marketplace.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Lär dig hur du publicerar och distribuerar ett hanterat program.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/managed-applications/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/managed-applications/managed-apps-quickstart-cli
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/managed-applications/publish-service-catalog-app">Publicera ett hanterat program för interna användare</a>
-    - html: <a href="/azure/managed-applications/publish-marketplace-app">Publicera ett hanterat program för externa användare</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Lär dig hur du utvecklar och hanterade program och erbjuder dem via Azure Marketplace.
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/managed-applications/publish-service-catalog-app">Publicera ett hanterat program för interna användare</a>
+          - html: <a href="/azure/managed-applications/publish-marketplace-app">Publicera ett hanterat program för externa användare</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/managedapp">Azure CLI</a></p><p><a href="/powershell/module/az.resources">PowerShell</a></p>
-    - title: REST API:er
-      html: <p><a href="/rest/api/resources/">REST</a></p>
-    - title: Användargränssnitt
-      html: <p><a href="/azure/managed-applications/create-uidefinition-elements">Element för användargränssnitt</a></p><p><a href="/azure/managed-applications/create-uidefinition-functions">Funktioner för användargränssnitt</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/managedapp">Azure CLI</a></p><p><a href="/powershell/module/az.resources">PowerShell</a></p>
+          - title: 'REST API:er'
+            html: <p><a href="/rest/api/resources/">REST</a></p>
+          - title: Användargränssnitt
+            html: <p><a href="/azure/managed-applications/create-uidefinition-elements">Element för användargränssnitt</a></p><p><a href="/azure/managed-applications/create-uidefinition-functions">Funktioner för användargränssnitt</a></p>
