--- a/articles/managed-applications/toc.yml
+++ b/articles/managed-applications/toc.yml
@@ -1,115 +1,108 @@
-items:
 - name: Dokumentation om Azure-hanterade program
   href: index.yml
 - name: Översikt
   items:
-  - name: Om hanterade program
-    href: overview.md
+    - name: Om hanterade program
+      href: overview.md
 - name: Snabbstarter
-  items:
-  - name: Publicera programdefinition
-    href: publish-managed-app-definition-quickstart.md
-  - name: Distribuera tjänstkatalogapp
-    href: deploy-service-catalog-quickstart.md
   expanded: true
+  items:
+    - name: Publicera programdefinition
+      href: publish-managed-app-definition-quickstart.md
+    - name: Distribuera tjänstkatalogapp
+      href: deploy-service-catalog-quickstart.md
 - name: Självstudier
   items:
-  - name: Skapa definitionsfiler
-    href: publish-service-catalog-app.md
-  - name: Publicera marknadsplatsprogram
-    href: publish-marketplace-app.md
+    - name: Skapa definitionsfiler
+      href: publish-service-catalog-app.md
+    - name: Publicera marknadsplatsprogram
+      href: publish-marketplace-app.md
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: cli-samples.md
-  - name: Azure PowerShell
-    href: powershell-samples.md
-  - name: Hanterade programlösningar
-    href: sample-projects.md
+    - name: Azure CLI
+      href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
+    - name: Hanterade programlösningar
+      href: sample-projects.md
 - name: Instruktionsguider
   items:
-  - name: Utgivare
-    items:
-    - name: Skapa portalgränssnitt
-      href: create-uidefinition-overview.md
-    - name: Testa portalgränssnitt
-      href: test-createuidefinition.md
-    - name: Uppdatera hanterade resurser
-      href: update-managed-resources.md
-    - name: Använd portalen och publicera definition av program
-      href: publish-portal.md
-    - name: Använda en hemlighet från Key Vault
-      href: key-vault-access.md
-  - name: Konsumenter
-    items:
-    - name: Övervaka hanterat program
-      href: monitor-managed-application-portal.md
+    - name: Utgivare
+      items:
+        - name: Skapa portalgränssnitt
+          href: create-uidefinition-overview.md
+        - name: Testa portalgränssnitt
+          href: test-createuidefinition.md
+        - name: Uppdatera hanterade resurser
+          href: update-managed-resources.md
+        - name: Använd portalen och publicera definition av program
+          href: publish-portal.md
+        - name: Använda en hemlighet från Key Vault
+          href: key-vault-access.md
+    - name: Konsumenter
+      items:
+        - name: Övervaka hanterat program
+          href: monitor-managed-application-portal.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/managedapp
-  - name: PowerShell
-    href: /powershell/module/az.resources
-  - name: REST
-    href: /rest/api/resources/
-  - name: Funktioner för användargränssnitt
-    href: create-uidefinition-functions.md
-  - name: Element för användargränssnitt
-    href: create-uidefinition-elements.md
-    items:
-    - name: Common
+    - name: Azure CLI
+      href: /cli/azure/managedapp
+    - name: PowerShell
+      href: /powershell/module/az.resources
+    - name: REST
+      href: /rest/api/resources/
+    - name: Funktioner för användargränssnitt
+      href: create-uidefinition-functions.md
+    - name: Element för användargränssnitt
+      href: create-uidefinition-elements.md
       items:
-      - name: DropDown
-        href: microsoft-common-dropdown.md
-      - name: FileUpload
-        href: microsoft-common-fileupload.md
-      - name: InfoBox
-        href: microsoft-common-infobox.md
-      - name: OptionsGroup
-        href: microsoft-common-optionsgroup.md
-      - name: PasswordBox
-        href: microsoft-common-passwordbox.md
-      - name: Section
-        href: microsoft-common-section.md
-      - name: TextBlock
-        href: microsoft-common-textblock.md
-      - name: TextBox
-        href: microsoft-common-textbox.md
-    - name: Compute
-      items:
-      - name: CredentialsCombo
-        href: microsoft-compute-credentialscombo.md
-      - name: SizeSelector
-        href: microsoft-compute-sizeselector.md
-      - name: UserNameTextBox
-        href: microsoft-compute-usernametextbox.md
-    - name: Nätverk
-      items:
-      - name: PublicIPAddressCombo
-        href: microsoft-network-publicipaddresscombo.md
-      - name: VirtualNetworkCombo
-        href: microsoft-network-virtualnetworkcombo.md
-    - name: Storage
-      items:
-      - name: MultiStorageAccountCombo
-        href: microsoft-storage-multistorageaccountcombo.md
-      - name: StorageAccountSelector
-        href: microsoft-storage-storageaccountselector.md
+        - name: Common
+          items:
+            - name: DropDown
+              href: microsoft-common-dropdown.md
+            - name: FileUpload
+              href: microsoft-common-fileupload.md
+            - name: InfoBox
+              href: microsoft-common-infobox.md
+            - name: OptionsGroup
+              href: microsoft-common-optionsgroup.md
+            - name: PasswordBox
+              href: microsoft-common-passwordbox.md
+            - name: Section
+              href: microsoft-common-section.md
+            - name: TextBlock
+              href: microsoft-common-textblock.md
+            - name: TextBox
+              href: microsoft-common-textbox.md
+        - name: Compute
+          items:
+            - name: CredentialsCombo
+              href: microsoft-compute-credentialscombo.md
+            - name: SizeSelector
+              href: microsoft-compute-sizeselector.md
+            - name: UserNameTextBox
+              href: microsoft-compute-usernametextbox.md
+        - name: Nätverk
+          items:
+            - name: PublicIPAddressCombo
+              href: microsoft-network-publicipaddresscombo.md
+            - name: VirtualNetworkCombo
+              href: microsoft-network-virtualnetworkcombo.md
+        - name: Storage
+          items:
+            - name: MultiStorageAccountCombo
+              href: microsoft-storage-multistorageaccountcombo.md
+            - name: StorageAccountSelector
+              href: microsoft-storage-storageaccountselector.md
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/managed-applications/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Metodtips för Resource Manager-mall
-    href: https://github.com/Azure/azure-quickstart-templates/blob/master/1-CONTRIBUTION-GUIDE/best-practices.md
-  - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-managedapps
-ms.openlocfilehash: e5ed2bab25c8140d12517e4757c028a7c6dd85d9
-ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/25/2019
-ms.locfileid: "58402022"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/managed-applications/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Metodtips för Resource Manager-mall
+      href: 'https://github.com/Azure/azure-quickstart-templates/blob/master/1-CONTRIBUTION-GUIDE/best-practices.md'
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-managedapps'
