--- a/articles/media-services/video-indexer/toc.yml
+++ b/articles/media-services/video-indexer/toc.yml
@@ -1,97 +1,90 @@
-items:
 - name: Dokumentation om Video Indexer
   href: ./index.yml
 - name: Översikt
   items:
-  - name: Vad är Video Indexer?
-    href: video-indexer-overview.md
+    - name: Vad är Video Indexer?
+      href: video-indexer-overview.md
 - name: Snabbstarter
-  items:
-  - name: Kom igång
-    href: video-indexer-get-started.md
   expanded: true
+  items:
+    - name: Kom igång
+      href: video-indexer-get-started.md
 - name: Självstudier
   items:
-  - name: Använda Video Indexer-API
-    href: video-indexer-use-apis.md
+    - name: Använda Video Indexer-API
+      href: video-indexer-use-apis.md
 - name: Begrepp
   href: video-indexer-concepts.md
   items:
-  - name: Jämföra förinställningar för Video Indexer och Media Services
-    href: compare-video-indexer-with-media-services-presets.md
-  - name: Hantera flera klientorganisationer
-    href: manage-multiple-tenants.md
-  - name: Anpassa innehållsmodeller
-    items:
-    - name: Varumärken
-      href: customize-brands-model-overview.md
-    - name: Språk
-      href: customize-language-model-overview.md
-    - name: Person
-      href: customize-person-model-overview.md
+    - name: Jämföra förinställningar för Video Indexer och Media Services
+      href: compare-video-indexer-with-media-services-presets.md
+    - name: Hantera flera klientorganisationer
+      href: manage-multiple-tenants.md
+    - name: Anpassa innehållsmodeller
+      items:
+        - name: Varumärken
+          href: customize-brands-model-overview.md
+        - name: Språk
+          href: customize-language-model-overview.md
+        - name: Person
+          href: customize-person-model-overview.md
 - name: Guider
   items:
-  - name: Anslut till Azure
-    href: connect-to-azure.md
-  - name: Hantera konto som är anslutet till Azure
-    href: manage-account-connected-to-azure.md
-  - name: Använda API för att ladda upp och indexera videor
-    href: upload-index-videos.md
-  - name: Undersöka utdata för Video Indexer
-    href: video-indexer-output-json-v2.md
-  - name: Hitta exakta ögonblick i videor
-    href: video-indexer-search.md
-  - name: Scener, klipp och nyckelbilder
-    href: scenes-shots-keyframes.md
-  - name: Visa och redigera Video Indexer-insikter
-    href: video-indexer-view-edit.md
-  - name: Skapa projekt med redigeringsprogram
-    href: use-editor-create-project.md
-  - name: Skapa videoinsikter utifrån befintliga videor
-    href: video-indexer-create-new.md
-  - name: Bädda in widgetar i programmet
-    href: video-indexer-embed-widgets.md
-  - name: Anpassa innehållsmodeller
-    items:
-    - name: Person
+    - name: Anslut till Azure
+      href: connect-to-azure.md
+    - name: Hantera konto som är anslutet till Azure
+      href: manage-account-connected-to-azure.md
+    - name: Använda API för att ladda upp och indexera videor
+      href: upload-index-videos.md
+    - name: Undersöka utdata för Video Indexer
+      href: video-indexer-output-json-v2.md
+    - name: Hitta exakta ögonblick i videor
+      href: video-indexer-search.md
+    - name: 'Scener, klipp och nyckelbilder'
+      href: scenes-shots-keyframes.md
+    - name: Visa och redigera Video Indexer-insikter
+      href: video-indexer-view-edit.md
+    - name: Skapa projekt med redigeringsprogram
+      href: use-editor-create-project.md
+    - name: Skapa videoinsikter utifrån befintliga videor
+      href: video-indexer-create-new.md
+    - name: Bädda in widgetar i programmet
+      href: video-indexer-embed-widgets.md
+    - name: Anpassa innehållsmodeller
       items:
-      - name: använda Video Indexer-webbplatsen
-        href: customize-person-model-with-website.md
-      - name: använda Video Indexer-API:et
-        href: customize-person-model-with-api.md
-    - name: Varumärken
-      items:
-      - name: använda Video Indexer-webbplatsen
-        href: customize-brands-model-with-website.md
-      - name: använda Video Indexer-API:et
-        href: customize-brands-model-with-api.md
-    - name: Språk
-      items:
-      - name: använda Video Indexer-webbplatsen
-        href: customize-language-model-with-website.md
-      - name: använda Video Indexer-API:et
-        href: customize-language-model-with-api.md
+        - name: Person
+          items:
+            - name: använda Video Indexer-webbplatsen
+              href: customize-person-model-with-website.md
+            - name: 'använda Video Indexer-API:et'
+              href: customize-person-model-with-api.md
+        - name: Varumärken
+          items:
+            - name: använda Video Indexer-webbplatsen
+              href: customize-brands-model-with-website.md
+            - name: 'använda Video Indexer-API:et'
+              href: customize-brands-model-with-api.md
+        - name: Språk
+          items:
+            - name: använda Video Indexer-webbplatsen
+              href: customize-language-model-with-website.md
+            - name: 'använda Video Indexer-API:et'
+              href: customize-language-model-with-api.md
 - name: Referens
   items:
-  - name: Video Indexer-API
-    href: https://api-portal.videoindexer.ai/
+    - name: Video Indexer-API
+      href: 'https://api-portal.videoindexer.ai/'
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=web-mobile
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/media-services/
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Regioner
-    href: regions.md
-  - name: Vanliga frågor och svar
-    href: faq.md
-  - name: Efterlevnad
-    href: https://gallery.technet.microsoft.com/Overview-of-Azure-c1be3942
-ms.openlocfilehash: f6caade807d37dfbf38e3f0dd47ab7f801c36a9a
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59793344"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=web-mobile'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/media-services/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Regioner
+      href: regions.md
+    - name: Vanliga frågor och svar
+      href: faq.md
+    - name: Efterlevnad
+      href: 'https://gallery.technet.microsoft.com/Overview-of-Azure-c1be3942'
