--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -1,105 +1,99 @@
-items:
 - name: Dokumentation om RBAC för Azure-resurser
   href: index.yml
+  items: null
 - name: Översikt
   items:
-  - name: Vad är RBAC?
-    href: overview.md
-  - name: Förstå de olika rollerna
-    href: rbac-and-directory-admin-roles.md
+    - name: Vad är RBAC?
+      href: overview.md
+    - name: Förstå de olika rollerna
+      href: rbac-and-directory-admin-roles.md
 - name: Snabbstarter
   items:
-  - name: Visa åtkomst för en användare
-    href: check-access.md
+    - name: Visa åtkomst för en användare
+      href: check-access.md
 - name: Självstudier
   items:
-  - name: Bevilja en användare åtkomst – portalen
-    href: quickstart-assign-role-user-portal.md
-  - name: Bevilja en användare åtkomst – PowerShell
-    href: tutorial-role-assignments-user-powershell.md
-  - name: Bevilja en grupp åtkomst – PowerShell
-    href: tutorial-role-assignments-group-powershell.md
-  - name: Skapa en anpassad roll – PowerShell
-    href: tutorial-custom-role-powershell.md
-  - name: Skapa en anpassad roll – CLI
-    href: tutorial-custom-role-cli.md
+    - name: Bevilja en användare åtkomst – portalen
+      href: quickstart-assign-role-user-portal.md
+    - name: Bevilja en användare åtkomst – PowerShell
+      href: tutorial-role-assignments-user-powershell.md
+    - name: Bevilja en grupp åtkomst – PowerShell
+      href: tutorial-role-assignments-group-powershell.md
+    - name: Skapa en anpassad roll – PowerShell
+      href: tutorial-custom-role-powershell.md
+    - name: Skapa en anpassad roll – CLI
+      href: tutorial-custom-role-cli.md
 - name: Begrepp
   items:
-  - name: Förstå rolldefinitioner
-    href: role-definitions.md
-  - name: PIM för Azure-resurser
-    href: pim-azure-resource.md
-  - name: Villkorlig åtkomst för hantering av Azure
-    href: conditional-access-azure-management.md
+    - name: Förstå rolldefinitioner
+      href: role-definitions.md
+    - name: PIM för Azure-resurser
+      href: pim-azure-resource.md
+    - name: Villkorlig åtkomst för hantering av Azure
+      href: conditional-access-azure-management.md
 - name: Instruktionsguider
   items:
-  - name: Hantera åtkomst
-    items:
-    - name: Portalen
-      href: role-assignments-portal.md
-    - name: PowerShell
-      href: role-assignments-powershell.md
-    - name: Azure CLI
-      href: role-assignments-cli.md
-    - name: REST-API
-      href: role-assignments-rest.md
-    - name: Mall
-      href: role-assignments-template.md
-  - name: Neka åtkomst
-    items:
-    - name: Avvisa tilldelning
-      href: deny-assignments.md
-    - name: Portalen
-      href: deny-assignments-portal.md
-    - name: REST-API
-      href: deny-assignments-rest.md
-  - name: Anpassade roller
-    items:
-    - name: Översikt
-      href: custom-roles.md
-    - name: PowerShell
-      href: custom-roles-powershell.md
-    - name: Azure CLI
-      href: custom-roles-cli.md
-    - name: REST-API
-      href: custom-roles-rest.md
-  - name: Visa aktivitetsloggar
-    href: change-history-report.md
-  - name: Utöka åtkomst för att hantera alla prenumerationer
-    href: elevate-access-global-admin.md
-  - name: Hantera åtkomst för externa användare
-    href: role-assignments-external-users.md
-  - name: Klassiska administratörer
-    href: classic-administrators.md
-  - name: Felsöka
-    href: troubleshooting.md
+    - name: Hantera åtkomst
+      items:
+        - name: Portalen
+          href: role-assignments-portal.md
+        - name: PowerShell
+          href: role-assignments-powershell.md
+        - name: Azure CLI
+          href: role-assignments-cli.md
+        - name: REST-API
+          href: role-assignments-rest.md
+        - name: Mall
+          href: role-assignments-template.md
+    - name: Neka åtkomst
+      items:
+        - name: Avvisa tilldelning
+          href: deny-assignments.md
+        - name: Portalen
+          href: deny-assignments-portal.md
+        - name: REST-API
+          href: deny-assignments-rest.md
+    - name: Anpassade roller
+      items:
+        - name: Översikt
+          href: custom-roles.md
+        - name: PowerShell
+          href: custom-roles-powershell.md
+        - name: Azure CLI
+          href: custom-roles-cli.md
+        - name: REST-API
+          href: custom-roles-rest.md
+    - name: Visa aktivitetsloggar
+      href: change-history-report.md
+    - name: Utöka åtkomst för att hantera alla prenumerationer
+      href: elevate-access-global-admin.md
+    - name: Hantera åtkomst för externa användare
+      href: role-assignments-external-users.md
+    - name: Klassiska administratörer
+      href: classic-administrators.md
+    - name: Felsöka
+      href: troubleshooting.md
 - name: Referens
   items:
-  - name: Inbyggda roller
-    href: built-in-roles.md
-  - name: Åtgärder för resursprovider
-    href: resource-provider-operations.md
-  - name: RBAC-begränsningar
-    href: ../azure-subscription-service-limits.md#role-based-access-control-limits
-  - name: Azure PowerShell
-    href: /powershell/module/az.resources
-  - name: Azure CLI
-    href: /cli/azure/role?view=azure-cli-latest
-  - name: REST-API
-    href: /rest/api/authorization/
-  - name: Mallar för Resurshanteraren
-    items:
-    - name: Rolltilldelningar
-      href: /azure/templates/microsoft.authorization/roleassignments
-    - name: Rolldefinitioner
-      href: /azure/templates/microsoft.authorization/roledefinitions
+    - name: Inbyggda roller
+      href: built-in-roles.md
+    - name: Åtgärder för resursprovider
+      href: resource-provider-operations.md
+    - name: RBAC-begränsningar
+      href: '../azure-subscription-service-limits.md#role-based-access-control-limits'
+    - name: Azure PowerShell
+      href: /powershell/module/az.resources
+    - name: Azure CLI
+      href: /cli/azure/role?view=azure-cli-latest
+    - name: REST-API
+      href: /rest/api/authorization/
+    - name: Mallar för Resurshanteraren
+      items:
+        - name: Rolltilldelningar
+          href: /azure/templates/microsoft.authorization/roleassignments
+        - name: Rolldefinitioner
+          href: /azure/templates/microsoft.authorization/roledefinitions
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/?products=azure-active-directory
-ms.openlocfilehash: 30bd7deb2a0845288999a09912e48700d3182b9b
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59785910"
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/?products=azure-active-directory
