--- a/articles/role-based-access-control/index.yml
+++ b/articles/role-based-access-control/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2f0465b954e48822470374abeadb13e90a03fa3a
-ms.sourcegitcommit: 4bf542eeb2dcdf60dcdccb331e0a336a39ce7ab3
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/19/2019
-ms.locfileid: "56408739"
 documentType: LandingData
 title: Dokumentation om RBAC för Azure-resurser
 metadata:
-  document_id: 
+  document_id: null
   title: Dokumentation om rollbaserad åtkomstkontroll (RBAC) för Azure-resurser | Microsoft Docs
-  description: Läs mer om rollbaserad åtkomstkontroll (RBAC) för att hantera vem som ska ha åtkomst till Azure-resurser, vad de ska kunna göra med resurserna och till vilka områden de ska ha åtkomst.
+  description: 'Läs mer om rollbaserad åtkomstkontroll (RBAC) för att hantera vem som ska ha åtkomst till Azure-resurser, vad de ska kunna göra med resurserna och till vilka områden de ska ha åtkomst.'
   services: active-directory
   author: rolyon
   manager: mtillman
@@ -24,39 +18,39 @@ abstract:
   description: Rollbaserad åtkomstkontroll (RBAC) är ett system som ger detaljerad åtkomsthantering av resurser i Azure. Med hjälp av RBAC kan du hålla isär uppgifter i ditt team och bevilja endast den omfattning av åtkomst till användare som de behöver för att utföra sitt arbete.
   aside:
     image:
-      alt: 
+      alt: null
       height: 112
       src: media/index/video-thumb-get-started.png
       width: 200
-    title: Reglera åtkomst till Azure (1:16)
-    href: https://www.youtube.com/embed/FKBoWWKRnvI
+    title: 'Reglera åtkomst till Azure (1:16)'
+    href: 'https://www.youtube.com/embed/FKBoWWKRnvI'
     width: 200
 sections:
-- title: Snabbstarter på fem minuter
-  items:
-  - type: list
-    style: unordered
+  - title: Snabbstarter på fem minuter
     items:
-    - html: <a href="/azure/role-based-access-control/check-access">Visa åtkomst för en användare</a>
-- title: Stegvisa självstudier
-  items:
-  - type: list
-    style: unordered
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/role-based-access-control/check-access">Visa åtkomst för en användare</a>
+  - title: Stegvisa självstudier
     items:
-    - html: <a href="/azure/role-based-access-control/quickstart-assign-role-user-portal">Bevilja en användare åtkomst – portalen</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-role-assignments-group-powershell">Bevilja en grupp åtkomst – PowerShell</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-custom-role-powershell">Skapa en anpassad roll – PowerShell</a>
-    - html: <a href="/azure/role-based-access-control/tutorial-custom-role-cli">Skapa en anpassad roll – CLI</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/role-based-access-control/quickstart-assign-role-user-portal">Bevilja en användare åtkomst – portalen</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-role-assignments-group-powershell">Bevilja en grupp åtkomst – PowerShell</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-custom-role-powershell">Skapa en anpassad roll – PowerShell</a>
+          - html: <a href="/azure/role-based-access-control/tutorial-custom-role-cli">Skapa en anpassad roll – CLI</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Skydda dina Azure-resurser med rollbaserad åtkomstkontroll (RBAC)
-      href: /learn/modules/secure-azure-resources-with-rbac/
-      image:
-        src: /learn/achievements/secure-azure-resources-with-rbac.svg
-        href: /learn/modules/secure-azure-resources-with-rbac/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-active-directory">Mer interaktiv inlärning...</a>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Skydda dina Azure-resurser med rollbaserad åtkomstkontroll (RBAC)
+            href: /learn/modules/secure-azure-resources-with-rbac/
+            image:
+              src: /learn/achievements/secure-azure-resources-with-rbac.svg
+              href: /learn/modules/secure-azure-resources-with-rbac/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-active-directory">Mer interaktiv inlärning...</a>
