--- a/articles/storage/TOC.yml
+++ b/articles/storage/TOC.yml
@@ -1,13 +1,12 @@
-items:
 - name: Azure Storage-dokumentation
   href: index.yml
 - name: Översikt
-  items:
-  - name: Introduktion
-    href: ./common/storage-introduction.md
-  - name: Välja blobar, filer eller diskar
-    href: ./common/storage-decide-blobs-files-disks.md
   expanded: true
+  items:
+    - name: Introduktion
+      href: ./common/storage-introduction.md
+    - name: 'Välja blobar, filer eller diskar'
+      href: ./common/storage-decide-blobs-files-disks.md
 - name: Blobar
   href: ./blobs/storage-blobs-overview.md
 - name: Data Lake Storage Gen2
@@ -20,13 +19,7 @@ items:
   href: ./tables/table-storage-overview.md
 - name: Diskar
   items:
-  - name: Windows
-    href: ../virtual-machines/windows/managed-disks-overview.md
-  - name: Linux
-    href: ../virtual-machines/linux/managed-disks-overview.md
-ms.openlocfilehash: 44904cb09b3865da6040fa581cf43dccf722db20
-ms.sourcegitcommit: d2329d88f5ecabbe3e6da8a820faba9b26cb8a02
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56329839"
+    - name: Windows
+      href: ../virtual-machines/windows/managed-disks-overview.md
+    - name: Linux
+      href: ../virtual-machines/linux/managed-disks-overview.md
