--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -49,7 +49,7 @@
       items:
         - name: Azure Storage-säkerhet
           href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Kryptering för vilande data
+        - name: Kryptering för lagringskonto
           href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure AD-autentisering via SMB
           href: storage-files-active-directory-overview.md
