--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f43db52a3fcfef17b56d5053b56e315e81fda27e
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56732593"
 documentType: LandingData
 title: Stream Analytics-dokumentation
 metadata:
-  title: Dokumentation om Azure Stream Analytics – självstudier, API-referens
-  meta.description: Learn how to run IoT analytics in the cloud with fully-managed event processing. Analyze data in real time from applications, sensors, devices, and more.
+  title: 'Dokumentation om Azure Stream Analytics – självstudier, API-referens'
+  meta.description: 'Learn how to run IoT analytics in the cloud with fully-managed event processing. Analyze data in real time from applications, sensors, devices, and more.'
   services: stream-analytics
   author: mamccrea
   ms.author: mamccrea
@@ -18,59 +12,59 @@ metadata:
   ms.date: 12/06/2018
   ms.custom: seodec18
 abstract:
-  description: Lär dig hur du kör Sakernas Internet-analys (IoT) i molnet med Stream Analytics, en fullständigt hanterad motor för händelsebearbetning. Självstudier och annan dokumentation visar hur du analyserar data i realtid från program, sensorer, enheter, sociala media och många fler.
+  description: 'Lär dig hur du kör Sakernas Internet-analys (IoT) i molnet med Stream Analytics, en fullständigt hanterad motor för händelsebearbetning. Självstudier och annan dokumentation visar hur du analyserar data i realtid från program, sensorer, enheter, sociala media och många fler.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/streaming-analytics-thumbnail.png
       width: 250
-    title: Realtidsanalys och maskininlärning med Azure Stream Analytics. (1:15:05)
-    href: https://myignite.techcommunity.microsoft.com/sessions/65358?source=sessions#ignite-html-anchor
+    title: 'Realtidsanalys och maskininlärning med Azure Stream Analytics. (1:15:05)'
+    href: 'https://myignite.techcommunity.microsoft.com/sessions/65358?source=sessions#ignite-html-anchor'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar ditt första Azure Stream Analytics-jobb:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: media/index/stream-analytics.svg
-      text: Azure Portal
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_powershell.svg
-      text: PowerShell
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-powershell
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: Visual Studio
-      href: https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-vs
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du distribuerar, hanterar och övervakar Azure Stream Analytics-jobb:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar ditt första Azure Stream Analytics-jobb:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/index/stream-analytics.svg
+            text: Azure Portal
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-portal'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_powershell.svg'
+            text: PowerShell
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-powershell'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: Visual Studio
+            href: 'https://docs.microsoft.com/azure/stream-analytics/stream-analytics-quick-create-vs'
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="stream-analytics-manage-job">Skapa ett Stream Analytics-jobb för att analysera telefonsamtalsdata och visualisera resultat i en Power BI-instrumentpanel</a>
-    - html: <a href="stream-analytics-with-azure-functions">Köra Azure Functions från Azure Stream Analytics-jobb</a>
-    - html: <a href="stream-analytics-javascript-user-defined-functions">Köra användardefinierade funktioner i Azure Stream Analytics JavaScript-jobb</a>
-    - html: <a href="stream-analytics-tools-visual-studio-cicd-vsts">Distribuera ett Azure Stream Analytics-jobb med CI/CD med hjälp av Azure Pipelines</a>
-    - html: <a href="stream-analytics-edge-csharp-udf">Skriva en C#-användardefinierad funktion för ett Azure Stream Analytics Edge-jobb (förhandsversion)</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar, hanterar och övervakar Azure Stream Analytics-jobb:'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="stream-analytics-manage-job">Skapa ett Stream Analytics-jobb för att analysera telefonsamtalsdata och visualisera resultat i en Power BI-instrumentpanel</a>
+          - html: <a href="stream-analytics-with-azure-functions">Köra Azure Functions från Azure Stream Analytics-jobb</a>
+          - html: <a href="stream-analytics-javascript-user-defined-functions">Köra användardefinierade funktioner i Azure Stream Analytics JavaScript-jobb</a>
+          - html: <a href="stream-analytics-tools-visual-studio-cicd-vsts">Distribuera ett Azure Stream Analytics-jobb med CI/CD med hjälp av Azure Pipelines</a>
+          - html: '<a href="stream-analytics-edge-csharp-udf">Skriva en C#-användardefinierad funktion för ett Azure Stream Analytics Edge-jobb (förhandsversion)</a>'
+  - title: Referens
     items:
-    - title: Förhandsgranskningar
-      html: <p><a href="stream-analytics-previews#public-previews">Allmänt tillgängliga förhandsversioner</a></p><p><a href="stream-analytics-previews#private-previews">Privat förhandsgranskning</a></p>
-    - title: Kommandorad
-      html: <p><a href="https://docs.microsoft.com/powershell/module/az.streamanalytics/#stream_analytics">Azure PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.streamanalytics?view=azuremgmtstreamanalytics-1.8.3">NET</a></p><p><a href="https://msdn.microsoft.com/azure/stream-analytics/reference/stream-analytics-query-language-reference">Stream Analytics-frågespråk</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/streamanalytics">REST API-referens</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Förhandsgranskningar
+            html: '<p><a href="stream-analytics-previews#public-previews">Allmänt tillgängliga förhandsversioner</a></p><p><a href="stream-analytics-previews#private-previews">Privat förhandsgranskning</a></p>'
+          - title: Kommandorad
+            html: '<p><a href="https://docs.microsoft.com/powershell/module/az.streamanalytics/#stream_analytics">Azure PowerShell</a></p>'
+          - title: Språk
+            html: '<p><a href="/dotnet/api/microsoft.azure.management.streamanalytics?view=azuremgmtstreamanalytics-1.8.3">NET</a></p><p><a href="https://msdn.microsoft.com/azure/stream-analytics/reference/stream-analytics-query-language-reference">Stream Analytics-frågespråk</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/streamanalytics">REST API-referens</a></p>
