--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -1,188 +1,181 @@
-items:
 - name: Dokumentation om Azure Time Series Insights
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Time Series Insights
-    href: time-series-insights-update-overview.md
+    - name: Om Time Series Insights
+      href: time-series-insights-update-overview.md
 - name: Snabbstarter
   items:
-  - name: Allmän tillgänglighet för Azure Time Series Insights
-    items:
-    - name: Utforska Time Series Insights
-      href: time-series-quickstart.md
-  - name: Förhandsversion av Azure Time Series Insights
-    items:
-    - name: Utforska förhandsversionen av Time Series Insights
-      href: time-series-insights-update-quickstart.md
+    - name: Allmän tillgänglighet för Azure Time Series Insights
+      items:
+        - name: Utforska Time Series Insights
+          href: time-series-quickstart.md
+    - name: Förhandsversion av Azure Time Series Insights
+      items:
+        - name: Utforska förhandsversionen av Time Series Insights
+          href: time-series-insights-update-quickstart.md
 - name: Självstudier
   items:
-  - name: Utforska JavaScript-klientbiblioteket i Time Series Insights
-    href: tutorial-explore-js-client-lib.md
-  - name: Skapa en enkelsidig Time Series Insights-webbapp
-    href: tutorial-create-tsi-sample-spa.md
-  - name: Allmän tillgänglighet för Azure Time Series Insights
-    items:
-    - name: Skapa en Time Series Insights-miljö
-      href: tutorial-create-populate-tsi-environment.md
-  - name: Förhandsversion av Azure Time Series Insights
-    items:
-    - name: Självstudie om förhandsversionen av Azure Time Series Insights
-      href: time-series-insights-update-create-environment.md
+    - name: Utforska JavaScript-klientbiblioteket i Time Series Insights
+      href: tutorial-explore-js-client-lib.md
+    - name: Skapa en enkelsidig Time Series Insights-webbapp
+      href: tutorial-create-tsi-sample-spa.md
+    - name: Allmän tillgänglighet för Azure Time Series Insights
+      items:
+        - name: Skapa en Time Series Insights-miljö
+          href: tutorial-create-populate-tsi-environment.md
+    - name: Förhandsversion av Azure Time Series Insights
+      items:
+        - name: Självstudie om förhandsversionen av Azure Time Series Insights
+          href: time-series-insights-update-create-environment.md
 - name: Begrepp
   items:
-  - name: Allmän tillgänglighet för Azure Time Series Insights
-    items:
-    - name: Om Time Series Insights
-      href: time-series-insights-overview.md
-    - name: Planera din miljö
-      href: time-series-insights-environment-planning.md
-    - name: Visualisera data i Utforskaren
-      href: time-series-insights-explorer.md
-    - name: Förstå datakvarhållning
-      href: time-series-insights-concepts-retention.md
-  - name: Förhandsversion av Azure Time Series Insights
-    items:
-    - name: Planera din miljö
-      href: time-series-insights-update-plan.md
-    - name: Datalagring och ingångshändelser
-      href: time-series-insights-update-storage-ingress.md
-    - name: Användningsfall
-      href: time-series-insights-update-use-cases.md
-    - name: Datamodellering
-      href: time-series-insights-update-tsm.md
-    - name: Fråga data
-      href: time-series-insights-update-tsq.md
-    - name: Visualisera data i uppdateringen för Explorer
-      href: time-series-insights-update-explorer.md
-  - name: Utveckla
-    items:
-    - name: Autentisera och auktorisera
-      href: time-series-insights-authentication-and-authorization.md
-    - name: Fråga data med hjälp av C#
-      href: time-series-insights-query-data-csharp.md
-    - name: Hantera referensdata med C#
-      href: time-series-insights-manage-reference-data-csharp.md
-    - name: Dela en anpassad vy
-      href: time-series-insights-parameterized-urls.md
+    - name: Allmän tillgänglighet för Azure Time Series Insights
+      items:
+        - name: Om Time Series Insights
+          href: time-series-insights-overview.md
+        - name: Planera din miljö
+          href: time-series-insights-environment-planning.md
+        - name: Visualisera data i Utforskaren
+          href: time-series-insights-explorer.md
+        - name: Förstå datakvarhållning
+          href: time-series-insights-concepts-retention.md
+    - name: Förhandsversion av Azure Time Series Insights
+      items:
+        - name: Planera din miljö
+          href: time-series-insights-update-plan.md
+        - name: Datalagring och ingångshändelser
+          href: time-series-insights-update-storage-ingress.md
+        - name: Användningsfall
+          href: time-series-insights-update-use-cases.md
+        - name: Datamodellering
+          href: time-series-insights-update-tsm.md
+        - name: Fråga data
+          href: time-series-insights-update-tsq.md
+        - name: Visualisera data i uppdateringen för Explorer
+          href: time-series-insights-update-explorer.md
+    - name: Utveckla
+      items:
+        - name: Autentisera och auktorisera
+          href: time-series-insights-authentication-and-authorization.md
+        - name: 'Fråga data med hjälp av C#'
+          href: time-series-insights-query-data-csharp.md
+        - name: 'Hantera referensdata med C#'
+          href: time-series-insights-manage-reference-data-csharp.md
+        - name: Dela en anpassad vy
+          href: time-series-insights-parameterized-urls.md
 - name: Instruktionsguider
   items:
-  - name: Bevilja åtkomst till data
-    href: time-series-insights-data-access.md
-  - name: Ansluta till Event Hubs
-    href: time-series-insights-how-to-add-an-event-source-eventhub.md
-  - name: Ansluta till IoT Hub
-    href: time-series-insights-how-to-add-an-event-source-iothub.md
-  - name: Hantera resurser med hjälp av mallar
-    href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
-  - name: Allmän tillgänglighet för Azure Time Series Insights
-    items:
-    - name: Skapa en miljö
-      href: time-series-insights-get-started.md
-    - name: Konfigurera datakvarhållning
-      href: time-series-insights-how-to-configure-retention.md
-    - name: Skapa en referensdatauppsättning
-      href: time-series-insights-add-reference-data-set.md
-    - name: Skicka händelser
-      href: time-series-insights-send-events.md
-    - name: Skala din miljö
-      href: time-series-insights-how-to-scale-your-environment.md
-    - name: Forma JSON för frågor
-      href: how-to-shape-query-json.md
-    - name: Minimera begränsningar
-      href: time-series-insights-environment-mitigate-latency.md
-    - name: Diagnostisera och felsöka
-      href: time-series-insights-diagnose-and-solve-problems.md
-  - name: Förhandsversion av Azure Time Series Insights
-    items:
-    - name: Etablera och hantera
-      href: time-series-insights-update-how-to-manage.md
-    - name: Välj ett Time Series-ID
-      href: time-series-insights-update-how-to-id.md
-    - name: Diagnostisera och felsöka
-      href: time-series-insights-update-how-to-troubleshoot.md
-    - name: Datamodellering
-      href: time-series-insights-update-how-to-tsm.md
-    - name: Forma JSON för frågor
-      href: time-series-insights-update-how-to-shape-events.md
+    - name: Bevilja åtkomst till data
+      href: time-series-insights-data-access.md
+    - name: Ansluta till Event Hubs
+      href: time-series-insights-how-to-add-an-event-source-eventhub.md
+    - name: Ansluta till IoT Hub
+      href: time-series-insights-how-to-add-an-event-source-iothub.md
+    - name: Hantera resurser med hjälp av mallar
+      href: time-series-insights-manage-resources-using-azure-resource-manager-template.md
+    - name: Allmän tillgänglighet för Azure Time Series Insights
+      items:
+        - name: Skapa en miljö
+          href: time-series-insights-get-started.md
+        - name: Konfigurera datakvarhållning
+          href: time-series-insights-how-to-configure-retention.md
+        - name: Skapa en referensdatauppsättning
+          href: time-series-insights-add-reference-data-set.md
+        - name: Skicka händelser
+          href: time-series-insights-send-events.md
+        - name: Skala din miljö
+          href: time-series-insights-how-to-scale-your-environment.md
+        - name: Forma JSON för frågor
+          href: how-to-shape-query-json.md
+        - name: Minimera begränsningar
+          href: time-series-insights-environment-mitigate-latency.md
+        - name: Diagnostisera och felsöka
+          href: time-series-insights-diagnose-and-solve-problems.md
+    - name: Förhandsversion av Azure Time Series Insights
+      items:
+        - name: Etablera och hantera
+          href: time-series-insights-update-how-to-manage.md
+        - name: Välj ett Time Series-ID
+          href: time-series-insights-update-how-to-id.md
+        - name: Diagnostisera och felsöka
+          href: time-series-insights-update-how-to-troubleshoot.md
+        - name: Datamodellering
+          href: time-series-insights-update-how-to-tsm.md
+        - name: Forma JSON för frågor
+          href: time-series-insights-update-how-to-shape-events.md
 - name: Referens
   items:
-  - name: Time Series Insights
-    items:
-    - name: Allmän tillgänglighet för Azure Time Series Insights
-      href: /rest/api/time-series-insights/ga
+    - name: Time Series Insights
       items:
-      - name: Söka i data
-        href: /rest/api/time-series-insights/ga-query
-        items:
-        - name: API
-          href: /rest/api/time-series-insights/ga-query-api
-        - name: Syntax
-          href: /rest/api/time-series-insights/ga-query-syntax
-      - name: API för referensdata
-        href: /rest/api/time-series-insights/ga-reference-data-api
-    - name: Förhandsversion av Azure Time Series Insights
-      href: /rest/api/time-series-insights/preview
-      items:
-      - name: Time Series-fråga
-        href: /rest/api/time-series-insights/preview-query
-      - name: Time Series-modell
-        href: /rest/api/time-series-insights/preview-model
-      - name: API för Time Series-miljö
-        href: /rest/api/time-series-insights/preview-env
-      - name: Time Series-uttryck och -syntax
-        href: /rest/api/time-series-insights/preview-tsx
+        - name: Allmän tillgänglighet för Azure Time Series Insights
+          href: /rest/api/time-series-insights/ga
+          items:
+            - name: Söka i data
+              href: /rest/api/time-series-insights/ga-query
+              items:
+                - name: API
+                  href: /rest/api/time-series-insights/ga-query-api
+                - name: Syntax
+                  href: /rest/api/time-series-insights/ga-query-syntax
+            - name: API för referensdata
+              href: /rest/api/time-series-insights/ga-reference-data-api
+        - name: Förhandsversion av Azure Time Series Insights
+          href: /rest/api/time-series-insights/preview
+          items:
+            - name: Time Series-fråga
+              href: /rest/api/time-series-insights/preview-query
+            - name: Time Series-modell
+              href: /rest/api/time-series-insights/preview-model
+            - name: API för Time Series-miljö
+              href: /rest/api/time-series-insights/preview-env
+            - name: Time Series-uttryck och -syntax
+              href: /rest/api/time-series-insights/preview-tsx
 - name: Relaterat
   items:
-  - name: Lösningar
-    items:
-    - name: Förinställda lösningar för IoT Suite
-      href: /azure/iot-suite
-    - name: IoT Central
-      href: https://docs.microsoft.com/microsoft-iot-central/
-  - name: Plattformstjänster
-    items:
-    - name: IoT Hub
-      href: /azure/iot-hub
-    - name: IoT Hub Device Provisioning Service
-      href: /azure/iot-dps
-    - name: Kartor
-      href: /azure/azure-maps
-    - name: Tjänst-SDK:er
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
-    - name: Time Series Insights
-      href: /azure/time-series-insights
-  - name: Edge
-    items:
-    - name: IoT Edge
-      href: /azure/iot-edge
-    - name: SDK:er för IoT-enheter
-      href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
-  - name: Azure Stream Analytics
-    href: /azure/stream-analytics/
+    - name: Lösningar
+      items:
+        - name: Förinställda lösningar för IoT Suite
+          href: /azure/iot-suite
+        - name: IoT Central
+          href: 'https://docs.microsoft.com/microsoft-iot-central/'
+    - name: Plattformstjänster
+      items:
+        - name: IoT Hub
+          href: /azure/iot-hub
+        - name: IoT Hub Device Provisioning Service
+          href: /azure/iot-dps
+        - name: Kartor
+          href: /azure/azure-maps
+        - name: 'Tjänst-SDK:er'
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+        - name: Time Series Insights
+          href: /azure/time-series-insights
+    - name: Edge
+      items:
+        - name: IoT Edge
+          href: /azure/iot-edge
+        - name: 'SDK:er för IoT-enheter'
+          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+    - name: Azure Stream Analytics
+      href: /azure/stream-analytics/
 - name: Resurser
   items:
-  - name: Kunddataförfrågningar
-    href: time-series-insights-customer-data-requests.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=iot
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/time-series-insights/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-timeseries-insights
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
-  - name: Videoklipp
-    href: https://azure.microsoft.com/resources/videos/index/?services=time-series-insights
-ms.openlocfilehash: ead0631edf7ed36d7dadf185c49bb0e78bafc9c7
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57341410"
+    - name: Kunddataförfrågningar
+      href: time-series-insights-customer-data-requests.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/time-series-insights/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureTimeSeriesInsights'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-timeseries-insights'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=time-series-insights'
