--- a/articles/virtual-machine-scale-sets/index.yml
+++ b/articles/virtual-machine-scale-sets/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: abf4aa9210b0d497b1f93361e05e2188d1ef3f6a
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46976638"
 documentType: LandingData
 title: Dokumentation för skalningsuppsättningar för virtuella datorer
 metadata:
-  title: Med skalningsuppsättningar för virtuella Azure-datorer kan du skapa och hantera grupper med identiska, belastningsutjämnade virtuella datorer med automatisk skalning. Lär dig hur du skapar, konfigurerar, hanterar och automatiskt skalar VM-skalningsuppsättningar med våra snabbstarter, självstudier och exempel.
+  title: 'Med skalningsuppsättningar för virtuella Azure-datorer kan du skapa och hantera grupper med identiska, belastningsutjämnade virtuella datorer med automatisk skalning. Lär dig hur du skapar, konfigurerar, hanterar och automatiskt skalar VM-skalningsuppsättningar med våra snabbstarter, självstudier och exempel.'
   services: virtual-machine-scale-sets
   author: carolz
   manager: czeumault
@@ -19,46 +13,46 @@ metadata:
   ms.date: 03/14/2018
   ms.author: carolz
 abstract:
-  description: Med skalningsuppsättningar för virtuella Azure-datorer kan du skapa och hantera grupper med identiska, belastningsutjämnade virtuella datorer med automatisk skalning. Lär dig hur du skapar, konfigurerar, hanterar och automatiskt skalar VM-skalningsuppsättningar med våra snabbstarter, självstudier och exempel.
+  description: 'Med skalningsuppsättningar för virtuella Azure-datorer kan du skapa och hantera grupper med identiska, belastningsutjämnade virtuella datorer med automatisk skalning. Lär dig hur du skapar, konfigurerar, hanterar och automatiskt skalar VM-skalningsuppsättningar med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter
-  items:
-  - type: paragraph
-    text: Lär dig hur du distribuerar en webbserver i en VM-skalningsuppsättning.
-  - type: list
-    style: icon48
+  - title: Snabbstarter
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/virtual-machine-scale-sets/quick-create-portal
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/virtual-machine-scale-sets/quick-create-cli
-    - image:
-        src: https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg
-      text: Azure PowerShell
-      href: /azure/virtual-machine-scale-sets/quick-create-powershell
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du distribuerar, hanterar och autoskalar datorer på Azure.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Lär dig hur du distribuerar en webbserver i en VM-skalningsuppsättning.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/portal.svg'
+            text: Azure Portal
+            href: /azure/virtual-machine-scale-sets/quick-create-portal
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/cli.svg'
+            text: Azure CLI
+            href: /azure/virtual-machine-scale-sets/quick-create-cli
+          - image:
+              src: 'https://docs.microsoft.com/azure/virtual-machines/linux/media/index/logo_powershell.svg'
+            text: Azure PowerShell
+            href: /azure/virtual-machine-scale-sets/quick-create-powershell
+  - title: Steg för steg-självstudier
     items:
-    - html: Skapa och hantera skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-powershell">Azure Powershell</a>
-    - html: Använda datadiskar med <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-powershell">Azure Powershell</a>
-    - html: Använda anpassade VM-avbildningar med <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-powershell">Azure Powershell</a>
-    - html: Distribuera appar till skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-powershell">Azure Powershell</a>
-    - html: Autoskala skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-powershell">Azure Powershell</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Exempeldistributioner för VM-skalningsuppsättningar.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig hur du distribuerar, hanterar och autoskalar datorer på Azure.'
+      - type: list
+        style: ordered
+        items:
+          - html: Skapa och hantera skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-create-and-manage-powershell">Azure Powershell</a>
+          - html: Använda datadiskar med <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-use-disks-powershell">Azure Powershell</a>
+          - html: Använda anpassade VM-avbildningar med <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-powershell">Azure Powershell</a>
+          - html: Distribuera appar till skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-powershell">Azure Powershell</a>
+          - html: Autoskala skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-cli">Azure CLI</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-powershell">Azure Powershell</a>
+  - title: Exempel
     items:
-    - html: <a href="/azure/virtual-machine-scale-sets/cli-samples">Azure CLI</a>
-    - html: <a href="/azure/virtual-machine-scale-sets/powershell-samples">Azure PowerShell</a>
+      - type: paragraph
+        text: Exempeldistributioner för VM-skalningsuppsättningar.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/virtual-machine-scale-sets/cli-samples">Azure CLI</a>
+          - html: <a href="/azure/virtual-machine-scale-sets/powershell-samples">Azure PowerShell</a>
