--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -1,61 +1,54 @@
-items:
 - name: Dokumentation om Virtual WAN
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Virtual WAN
-    href: virtual-wan-about.md
+    - name: Om Virtual WAN
+      href: virtual-wan-about.md
 - name: Självstudier
   items:
-  - name: Skapa en plats-till-plats-anslutning
-    href: virtual-wan-site-to-site-portal.md
-  - name: Skapa en ExpressRoute-anslutning
-    href: virtual-wan-expressroute-portal.md
-  - name: Skapa en punkt-till-plats-anslutning
-    href: virtual-wan-point-to-site-portal.md
+    - name: Skapa en plats-till-plats-anslutning
+      href: virtual-wan-site-to-site-portal.md
+    - name: Skapa en ExpressRoute-anslutning
+      href: virtual-wan-expressroute-portal.md
+    - name: Skapa en punkt-till-plats-anslutning
+      href: virtual-wan-point-to-site-portal.md
 - name: Begrepp
   items:
-  - name: Platser och partners
-    href: virtual-wan-locations-partners.md
-  - name: Office 365-kontrollplanet i virtuellt WAN-nätverk
-    href: virtual-wan-office365-overview.md
+    - name: Platser och partners
+      href: virtual-wan-locations-partners.md
+    - name: Office 365-kontrollplanet i virtuellt WAN-nätverk
+      href: virtual-wan-office365-overview.md
 - name: Instruktionsguider
   items:
-  - name: Dirigera trafik från en virtuell hubb till en NVA
-    items:
-    - name: Azure Portal
-      href: virtual-wan-route-table-portal.md
-    - name: Azure PowerShell
-      href: virtual-wan-route-table.md
-  - name: Virtuella WAN-partners - automatisering
-    href: virtual-wan-configure-automation-providers.md
+    - name: Dirigera trafik från en virtuell hubb till en NVA
+      items:
+        - name: Azure Portal
+          href: virtual-wan-route-table-portal.md
+        - name: Azure PowerShell
+          href: virtual-wan-route-table.md
+    - name: Virtuella WAN-partners - automatisering
+      href: virtual-wan-configure-automation-providers.md
 - name: Referens
   items:
-  - name: Azure PowerShell
-    href: /powershell/module/az.network#networking
-  - name: REST
-    href: /rest/api/azure
-  - name: Azure CLI
-    href: /cli/azure/ext/virtual-wan
+    - name: Azure PowerShell
+      href: '/powershell/module/az.network#networking'
+    - name: REST
+      href: /rest/api/azure
+    - name: Azure CLI
+      href: /cli/azure/ext/virtual-wan
 - name: Resurser
   items:
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: virtual-wan-faq.md
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=networking
-  - name: Blogg
-    href: https://azure.microsoft.com/blog/topics/networking
-  - name: Prenumerations- och tjänstbegränsningar
-    href: ../azure-subscription-service-limits.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/virtual-wan
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: SLA
-    href: https://azure.microsoft.com/support/legal/sla
-ms.openlocfilehash: 555af48950df4afab512951a7c3ae53e41663427
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58579741"
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: virtual-wan-faq.md
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Blogg
+      href: 'https://azure.microsoft.com/blog/topics/networking'
+    - name: Prenumerations- och tjänstbegränsningar
+      href: ../azure-subscription-service-limits.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/virtual-wan'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: SLA
+      href: 'https://azure.microsoft.com/support/legal/sla'
